commit translated contents

--- a/articles/blockchain/workbench/TOC.yml
+++ b/articles/blockchain/workbench/TOC.yml
@@ -1,80 +1,73 @@
-items:
 - name: Azure Blockchain Workbench (openbare review)
   href: index.yml
 - name: Overzicht
-  items:
-  - name: Over Azure Blockchain Workbench
-    href: overview.md
   expanded: true
+  items:
+    - name: Over Azure Blockchain Workbench
+      href: overview.md
 - name: Zelfstudies
-  items:
-  - name: Een blockchain-app maken
-    href: create-app.md
-  - name: Een blockchain-app gebruiken
-    href: use.md
   expanded: true
+  items:
+    - name: Een blockchain-app maken
+      href: create-app.md
+    - name: Een blockchain-app gebruiken
+      href: use.md
 - name: Concepten
   items:
-  - name: Architectuur
-    href: architecture.md
-  - name: Integratiepatronen
-    href: integration-patterns.md
+    - name: Architectuur
+      href: architecture.md
+    - name: Integratiepatronen
+      href: integration-patterns.md
 - name: Handleidingen
-  items:
-  - name: Workbench implementeren
-    href: deploy.md
-  - name: Workbench-gebruikers beheren
-    href: manage-users.md
-  - name: Versiebeheer van apps
-    href: version-app.md
-  - name: Workbench-API gebruiken
-    href: use-api.md
-  - name: Problemen oplossen met apps
-    href: troubleshooting.md
-  - name: Workbench-gegevens gebruiken
-    items:
-    - name: DB-firewall configureren
-      href: database-firewall.md
-    - name: DB-gegevens ophalen
-      href: getdb-details.md
-    - name: Gegevens in Excel gebruiken
-      href: data-excel.md
-    - name: Gegevens in Power BI gebruiken
-      href: data-powerbi.md
-    - name: Gegevens in SQL Management Studio gebruiken
-      href: data-sql-management-studio.md
   expanded: true
+  items:
+    - name: Workbench implementeren
+      href: deploy.md
+    - name: Workbench-gebruikers beheren
+      href: manage-users.md
+    - name: Versiebeheer van apps
+      href: version-app.md
+    - name: Workbench-API gebruiken
+      href: use-api.md
+    - name: Problemen oplossen met apps
+      href: troubleshooting.md
+    - name: Workbench-gegevens gebruiken
+      items:
+        - name: DB-firewall configureren
+          href: database-firewall.md
+        - name: DB-gegevens ophalen
+          href: getdb-details.md
+        - name: Gegevens in Excel gebruiken
+          href: data-excel.md
+        - name: Gegevens in Power BI gebruiken
+          href: data-powerbi.md
+        - name: Gegevens in SQL Management Studio gebruiken
+          href: data-sql-management-studio.md
 - name: Naslaginformatie
   items:
-  - name: Configuratie
-    href: configuration.md
-  - name: Databaseweergaven
-    href: database-views.md
-  - name: Berichten-API
-    href: messages-overview.md
-  - name: REST-API
-    href: https://docs.microsoft.com/rest/api/azure-blockchain-workbench
+    - name: Configuratie
+      href: configuration.md
+    - name: Databaseweergaven
+      href: database-views.md
+    - name: Berichten-API
+      href: messages-overview.md
+    - name: REST-API
+      href: 'https://docs.microsoft.com/rest/api/azure-blockchain-workbench'
 - name: Resources
   items:
-  - name: Blog
-    href: https://azure.microsoft.com/blog/topics/blockchain/
-  - name: Codevoorbeelden
-    href: https://github.com/Azure-Samples/blockchain
-  - name: Community
-    href: https://techcommunity.microsoft.com/t5/Blockchain/bd-p/AzureBlockchain
-  - name: Forum
-    href: https://aka.ms/workbenchforum
-  - name: Productfeedback
-    href: https://aka.ms/blockchainuservoice
+    - name: Blog
+      href: 'https://azure.microsoft.com/blog/topics/blockchain/'
+    - name: Codevoorbeelden
+      href: 'https://github.com/Azure-Samples/blockchain'
+    - name: Community
+      href: 'https://techcommunity.microsoft.com/t5/Blockchain/bd-p/AzureBlockchain'
+    - name: Forum
+      href: 'https://aka.ms/workbenchforum'
+    - name: Productfeedback
+      href: 'https://aka.ms/blockchainuservoice'
 - name: Oplossingssjablonen
   items:
-  - name: Ethereum Proof-of-Authority-consortium
-    href: ../templates/ethereum-poa-deployment.md
-  - name: Hyperledger Fabric-consortium
-    href: ../templates/hyperledger-fabric-consortium-blockchain.md
-ms.openlocfilehash: b0426cc5dfbac62657ad172f5fa73586e6214601
-ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/19/2019
-ms.locfileid: "58001922"
+    - name: Ethereum Proof-of-Authority-consortium
+      href: ../templates/ethereum-poa-deployment.md
+    - name: Hyperledger Fabric-consortium
+      href: ../templates/hyperledger-fabric-consortium-blockchain.md
