--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -49,7 +49,7 @@
       items:
         - name: Beveiliging voor Azure Storage
           href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Versleuteling van data-at-rest
+        - name: Opslagaccountversleuteling
           href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Azure Active Directory-verificatie via SMB
           href: storage-files-active-directory-overview.md
