--- a/articles/application-gateway/index.yml
+++ b/articles/application-gateway/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 9b3a65446a6f55101e93fdee4c437cde7408b7ca
-ms.sourcegitcommit: 803e66de6de4a094c6ae9cde7b76f5f4b622a7bb
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 01/02/2019
-ms.locfileid: "53973074"
 documentType: LandingData
 title: Documentatie over Application Gateway
 metadata:
   title: Documentatie voor Azure Application Gateway - zelfstudies en API-verwijzing
-  meta.description: Learn how to create application gateways. Documentation helps you plan, deploy, and manage web traffic to your Azure resources.
+  meta.description: 'Learn how to create application gateways. Documentation helps you plan, deploy, and manage web traffic to your Azure resources.'
   services: application-gateway
   author: davidmu1
   manager: jeconnocfte
@@ -18,59 +12,59 @@ metadata:
   ms.date: 02/01/2018
   ms.author: davidmu
 abstract:
-  description: Meer informatie over de implementatie van de Azure Application Gateway-ADC (application delivery controller) als een service. Zelfstudies, API-verwijzingen en andere documentatie laten zien hoe u routering op toepassingsniveau en taakverdelingsservices kunt instellen om een schaalbaar en maximaal beschikbaar webfront-end te bouwen.
+  description: 'Meer informatie over de implementatie van de Azure Application Gateway-ADC (application delivery controller) als een service. Zelfstudies, API-verwijzingen en andere documentatie laten zien hoe u routering op toepassingsniveau en taakverdelingsservices kunt instellen om een schaalbaar en maximaal beschikbaar webfront-end te bouwen.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: 'Meer informatie over het beheren van webverkeer naar uw resources met Application Gateway:'
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/application-gateway/media/index/portal.svg
-      text: Azure-portal
-      href: https://docs.microsoft.com/azure/application-gateway/quick-create-portal
-    - image:
-        src: https://docs.microsoft.com/azure/application-gateway/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: https://docs.microsoft.com/azure/application-gateway/quick-create-powershell
-    - image:
-        src: https://docs.microsoft.com/azure/application-gateway/media/index/cli.svg
-      text: Azure-CLI
-      href: https://docs.microsoft.com/azure/application-gateway/quick-create-cli
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Ontdek hoe u in Azure toepassingsgateways implementeert, beheert en bewaakt
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Meer informatie over het beheren van webverkeer naar uw resources met Application Gateway:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/application-gateway/media/index/portal.svg'
+            text: Azure-portal
+            href: 'https://docs.microsoft.com/azure/application-gateway/quick-create-portal'
+          - image:
+              src: 'https://docs.microsoft.com/azure/application-gateway/media/index/logo_powershell.svg'
+            text: Azure PowerShell
+            href: 'https://docs.microsoft.com/azure/application-gateway/quick-create-powershell'
+          - image:
+              src: 'https://docs.microsoft.com/azure/application-gateway/media/index/cli.svg'
+            text: Azure-CLI
+            href: 'https://docs.microsoft.com/azure/application-gateway/quick-create-cli'
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/application-gateway/tutorial-manage-web-traffic-cli">Webverkeer beheren met een toepassingsgateway.</a>
-    - html: <a href="/azure/application-gateway/tutorial-restrict-web-traffic-cli">Webverkeer beperken met een firewall voor webtoepassingen in een toepassingsgateway.</a>
-    - html: <a href="/azure/application-gateway/tutorial-ssl-cli">SSL-beëindiging inschakelen in een toepassingsgateway.</a>
-    - html: <a href="/azure/application-gateway/tutorial-multiple-sites-cli">Meerdere websites hosten met behulp van een toepassingsgateway.</a>
-    - html: <a href="/azure/application-gateway/tutorial-url-route-cli">Routeverkeer op basis van de URL in een toepassingsgateway.</a>
-    - html: <a href="/azure/application-gateway/tutorial-url-redirect-cli">Verkeer omleiden naar specifieke servers in een gatewaygroep voor toepassingen.</a>
-- title: Voorbeelden
-  items:
-  - type: paragraph
-    text: Webverkeer beheren met een toepassingsgateway.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: 'Ontdek hoe u in Azure toepassingsgateways implementeert, beheert en bewaakt'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/application-gateway/tutorial-manage-web-traffic-cli">Webverkeer beheren met een toepassingsgateway.</a>
+          - html: <a href="/azure/application-gateway/tutorial-restrict-web-traffic-cli">Webverkeer beperken met een firewall voor webtoepassingen in een toepassingsgateway.</a>
+          - html: <a href="/azure/application-gateway/tutorial-ssl-cli">SSL-beëindiging inschakelen in een toepassingsgateway.</a>
+          - html: <a href="/azure/application-gateway/tutorial-multiple-sites-cli">Meerdere websites hosten met behulp van een toepassingsgateway.</a>
+          - html: <a href="/azure/application-gateway/tutorial-url-route-cli">Routeverkeer op basis van de URL in een toepassingsgateway.</a>
+          - html: <a href="/azure/application-gateway/tutorial-url-redirect-cli">Verkeer omleiden naar specifieke servers in een gatewaygroep voor toepassingen.</a>
+  - title: Voorbeelden
     items:
-    - html: <a href="/azure/application-gateway/cli-samples">Azure-CLI</a>
-    - html: <a href="/azure/application-gateway/powershell-samples">Azure PowerShell</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Webverkeer beheren met een toepassingsgateway.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/application-gateway/cli-samples">Azure-CLI</a>
+          - html: <a href="/azure/application-gateway/powershell-samples">Azure PowerShell</a>
+  - title: Naslaginformatie
     items:
-    - title: Opdrachtregel
-      html: <p><a href="/powershell/resourcemanager">Azure PowerShell</a></p><p><a href="/cli/azure/network/application-gateway">Azure-CLI</a></p>
-    - title: Talen
-      html: <p><a href="/dotnet/api">.NET</a></p><p><a href="/java/api/com.microsoft.azure.management.network">Java</a></p><p><a href="/javascript/api/azure-arm-network/ApplicationGateways">Node.js</a></p><p><a href="https://docs.microsoft.com/python/api/azure-mgmt-network/azure.mgmt.network.v2018_08_01.operations.application_gateways_operations.applicationgatewaysoperations?view=azure-python">Python</a></p>
-    - title: REST
-      html: <p><a href="https://msdn.microsoft.com/library/mt684941">Complete naslaginformatie over de REST-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Opdrachtregel
+            html: <p><a href="/powershell/resourcemanager">Azure PowerShell</a></p><p><a href="/cli/azure/network/application-gateway">Azure-CLI</a></p>
+          - title: Talen
+            html: '<p><a href="/dotnet/api">.NET</a></p><p><a href="/java/api/com.microsoft.azure.management.network">Java</a></p><p><a href="/javascript/api/azure-arm-network/ApplicationGateways">Node.js</a></p><p><a href="https://docs.microsoft.com/python/api/azure-mgmt-network/azure.mgmt.network.v2018_08_01.operations.application_gateways_operations.applicationgatewaysoperations?view=azure-python">Python</a></p>'
+          - title: REST
+            html: '<p><a href="https://msdn.microsoft.com/library/mt684941">Complete naslaginformatie over de REST-API</a></p>'
