--- a/articles/azure-databricks/index.yml
+++ b/articles/azure-databricks/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 0a1c495362ef38723c61eace25ebb13ec9ed3a6a
-ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "57883641"
 documentType: LandingData
 title: Documentatie voor Azure Databricks
 metadata:
   title: Documentatie voor Azure Databricks
-  description: Leer Azure Databricks te gebruiken met behulp van de QuickStart en via de andere links die hier te vinden zijn. Azure Databricks is een op Apache Spark gebaseerd analyseplatform, geoptimaliseerd voor het Microsoft Azure-platform voor cloudservices.
+  description: 'Leer Azure Databricks te gebruiken met behulp van de QuickStart en via de andere links die hier te vinden zijn. Azure Databricks is een op Apache Spark gebaseerd analyseplatform, geoptimaliseerd voor het Microsoft Azure-platform voor cloudservices.'
   services: azure-databricks
   author: mamccrea
   ms.service: azure-databricks
@@ -17,48 +11,48 @@ metadata:
   ms.date: 03/19/2018
   ms.author: mamccrea
 abstract:
-  description: Leer hoe u Azure Databricks gebruikt, een analyseplatform op basis van Apache Spark dat u met slechts één klik installeert, en dat beschikt over gestroomlijnde werkstromen en een interactieve werkruimte waarin datawetenschappers, data-engineers en bedrijfsanalisten kunnen samenwerken. Onze quickstarts en zelfstudies laten u zien hoe u aan de slag gaat met Azure Databricks en dit integreert met andere Azure-services.
+  description: 'Leer hoe u Azure Databricks gebruikt, een analyseplatform op basis van Apache Spark dat u met slechts één klik installeert, en dat beschikt over gestroomlijnde werkstromen en een interactieve werkruimte waarin datawetenschappers, data-engineers en bedrijfsanalisten kunnen samenwerken. Onze quickstarts en zelfstudies laten u zien hoe u aan de slag gaat met Azure Databricks en dit integreert met andere Azure-services.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: media/index/video.png
       width: 250
-    title: Inleiding tot Azure Databricks (3:38)
-    href: https://azure.microsoft.com/resources/videos/connect-2017-introduction-to-azure-databricks/
+    title: 'Inleiding tot Azure Databricks (3:38)'
+    href: 'https://azure.microsoft.com/resources/videos/connect-2017-introduction-to-azure-databricks/'
     width: 250
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: 'Leer hoe u een Azure Databricks-werkruimte en een Spark-cluster maakt en voer de taken vervolgens uit met behulp van:'
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: /azure/azure-databricks/media/index/portal.svg
-      text: Azure Portal
-      href: /azure/azure-databricks/quickstart-create-databricks-workspace-portal
-    - image:
-        src: /azure/azure-databricks/media/index/logo_azure_resource_manager.svg
-      text: Resource Manager-sjabloon
-      href: /azure/azure-databricks/quickstart-create-databricks-workspace-resource-manager-template
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: 'Meer informatie over het werken met Azure Databricks:'
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Leer hoe u een Azure Databricks-werkruimte en een Spark-cluster maakt en voer de taken vervolgens uit met behulp van:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/azure-databricks/media/index/portal.svg
+            text: Azure Portal
+            href: /azure/azure-databricks/quickstart-create-databricks-workspace-portal
+          - image:
+              src: /azure/azure-databricks/media/index/logo_azure_resource_manager.svg
+            text: Resource Manager-sjabloon
+            href: /azure/azure-databricks/quickstart-create-databricks-workspace-resource-manager-template
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/azure-databricks/databricks-extract-load-sql-data-warehouse">Gegevens uitpakken, transformeren en laden</a>
-    - html: <a href="/azure/azure-databricks/databricks-stream-from-eventhubs">Gegevens streamen vanuit Event Hubs</a>
-    - html: <a href="/azure/azure-databricks/databricks-sentiment-analysis-cognitive-services">Sentimentanalyse met Cognitive Services</a>
-    - html: <a href="https://docs.azuredatabricks.net/spark/latest/structured-streaming/kafka.html" target="_blank">Gegevens streamen vanuit HDInsight Kafka</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Meer informatie over het werken met Azure Databricks:'
+      - type: list
+        style: ordered
+        items:
+          - html: '<a href="/azure/azure-databricks/databricks-extract-load-sql-data-warehouse">Gegevens uitpakken, transformeren en laden</a>'
+          - html: <a href="/azure/azure-databricks/databricks-stream-from-eventhubs">Gegevens streamen vanuit Event Hubs</a>
+          - html: <a href="/azure/azure-databricks/databricks-sentiment-analysis-cognitive-services">Sentimentanalyse met Cognitive Services</a>
+          - html: '<a href="https://docs.azuredatabricks.net/spark/latest/structured-streaming/kafka.html" target="_blank">Gegevens streamen vanuit HDInsight Kafka</a>'
+  - title: Naslaginformatie
     items:
-    - title: REST
-      html: <p><a href="/rest/api/databricks">REST API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: REST
+            html: <p><a href="/rest/api/databricks">REST API</a></p>
