--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -1,234 +1,227 @@
-items:
 - name: Documentatie over Batch
   href: index.yml
 - name: Overzicht
   items:
-  - name: Wat is Azure Batch?
-    href: batch-technical-overview.md
+    - name: Wat is Azure Batch?
+      href: batch-technical-overview.md
 - name: Snelstartgidsen
-  items:
-  - name: Een Batch-taak uitvoeren - CLI
-    href: quick-create-cli.md
-  - name: Een Batch-taak uitvoeren - Portal
-    href: quick-create-portal.md
-  - name: Een Batch-taak uitvoeren - .NET
-    href: quick-run-dotnet.md
-  - name: Een Batch-taak uitvoeren - Python
-    href: quick-run-python.md
   expanded: true
+  items:
+    - name: Een Batch-taak uitvoeren - CLI
+      href: quick-create-cli.md
+    - name: Een Batch-taak uitvoeren - Portal
+      href: quick-create-portal.md
+    - name: Een Batch-taak uitvoeren - .NET
+      href: quick-run-dotnet.md
+    - name: Een Batch-taak uitvoeren - Python
+      href: quick-run-python.md
 - name: Zelfstudies
   items:
-  - name: Parallelle bestandsverwerking - .NET
-    href: tutorial-parallel-dotnet.md
-  - name: Parallelle bestandsverwerking - Python
-    href: tutorial-parallel-python.md
-  - name: Scènes weergeven met Arnold
-    href: tutorial-rendering-cli.md
-  - name: Weergeven met Batch Explorer
-    href: tutorial-rendering-batchexplorer-blender.md
-  - name: Parallelle R-simulatie
-    href: tutorial-r-doazureparallel.md
+    - name: Parallelle bestandsverwerking - .NET
+      href: tutorial-parallel-dotnet.md
+    - name: Parallelle bestandsverwerking - Python
+      href: tutorial-parallel-python.md
+    - name: Scènes weergeven met Arnold
+      href: tutorial-rendering-cli.md
+    - name: Weergeven met Batch Explorer
+      href: tutorial-rendering-batchexplorer-blender.md
+    - name: Parallelle R-simulatie
+      href: tutorial-r-doazureparallel.md
 - name: Voorbeelden
   items:
-  - name: Codevoorbeelden
-    items:
-    - name: Azure-codevoorbeelden
-      href: https://azure.microsoft.com/resources/samples/?service=batch
-    - name: Opslagplaats voor Batch-voorbeelden
-      href: https://github.com/Azure/azure-batch-samples
-  - name: Azure-CLI
-    href: cli-samples.md
+    - name: Codevoorbeelden
+      items:
+        - name: Azure-codevoorbeelden
+          href: 'https://azure.microsoft.com/resources/samples/?service=batch'
+        - name: Opslagplaats voor Batch-voorbeelden
+          href: 'https://github.com/Azure/azure-batch-samples'
+    - name: Azure-CLI
+      href: cli-samples.md
 - name: Concepten
   items:
-  - name: Functies voor ontwikkelaars
-    href: batch-api-basics.md
-  - name: API's en hulpprogramma’s
-    href: batch-apis-tools.md
-  - name: Quota en limieten
-    href: batch-quota-limit.md
-  - name: Ondersteunde VM-grootten
-    href: batch-pool-vm-sizes.md
-  - name: Hoge beschikbaarheid en herstel na noodgevallen
-    href: high-availability-disaster-recovery.md
+    - name: Functies voor ontwikkelaars
+      href: batch-api-basics.md
+    - name: API's en hulpprogramma’s
+      href: batch-apis-tools.md
+    - name: Quota en limieten
+      href: batch-quota-limit.md
+    - name: Ondersteunde VM-grootten
+      href: batch-pool-vm-sizes.md
+    - name: Hoge beschikbaarheid en herstel na noodgevallen
+      href: high-availability-disaster-recovery.md
 - name: Handleidingen
   items:
-  - name: Batch-accounts beheren
-    items:
-    - name: Batch-accounts beheren met de portal
-      href: batch-account-create-portal.md
-    - name: Batch-accounts beheren met Batch Management .NET
-      href: batch-management-dotnet.md
-  - name: Verifiëren met Azure AD
-    items:
-    - name: Azure AD met Batch-service
-      href: batch-aad-auth.md
-    - name: Azure AD met Batch Management
-      href: batch-aad-auth-management.md
-  - name: Toepassingspakketten maken
-    href: batch-application-packages.md
-  - name: Pools maken en beheren
-    items:
-    - name: Compute-knooppunten automatisch schalen
-      href: batch-automatic-scaling.md
-    - name: Een VM-grootte voor rekenknooppunten kiezen
-      href: batch-pool-vm-sizes.md
-    - name: Toegang tot rekenknooppunten configureren
-      href: pool-endpoint-configuration.md
-    - name: Een pool maken met een aangepaste installatiekopie
-      href: batch-custom-images.md
-    - name: Een pool in een virtueel netwerk maken
-      href: batch-virtual-network.md
-    - name: Azure-bestandsshare koppelen
-      href: pool-file-shares.md
-    - name: RDMA- of GPU-exemplaren gebruiken
-      href: batch-pool-compute-intensive-sizes.md
-    - name: Rekenknooppunten in Linux gebruiken
-      href: batch-linux-nodes.md
-    - name: Virtuele machines met lage prioriteit gebruiken
-      href: batch-low-pri-vms.md
-    - name: Controleren op pool- en knooppuntfouten
-      href: batch-pool-node-error-checking.md
-  - name: Een CI/CD-pijplijn maken voor Batch
-    href: batch-ci-cd.md
-  - name: Taken beheren
-    items:
-    - name: Taken voor taakvoorbereiding- en -voltooiing
-      href: batch-job-prep-release.md
-    - name: Gelijktijdige knooppunttaken
-      href: batch-parallel-node-tasks.md
-    - name: Taakafhankelijkheden
-      href: batch-task-dependencies.md
-    - name: Gebruikersaccounts voor het uitvoeren van taken
-      href: batch-user-accounts.md
-    - name: Een groot aantal taken indienen
-      href: large-number-tasks.md
-  - name: Bronbestanden maken
-    href: resource-files.md
-  - name: Taken persistent maken
-    href: batch-task-output.md
-    items:
-    - name: Uitvoer met de Batch-API behouden
-      href: batch-task-output-files.md
-    - name: Uitvoer behouden met File Conventions-bibliotheek
-      href: batch-task-output-file-conventions.md
-  - name: Batch-oplossingen controleren
-    href: monitoring-overview.md
-    items:
-    - name: Metrische gegevens en diagnostische logboeken gebruiken
-      href: batch-diagnostics.md
-    - name: Controleren met behulp van Application Insights
-      href: monitor-application-insights.md
-    - name: Resources per status tellen
-      href: batch-get-resource-counts.md
-    - name: Efficiënt query's uitvoeren op resources
-      href: batch-efficient-list-queries.md
-  - name: Scripthulpprogramma's gebruiken
-    items:
-    - name: Azure PowerShell gebruiken
-      href: batch-powershell-cmdlets-get-started.md
-    - name: Azure CLI gebruiken
-      href: batch-cli-get-started.md
+    - name: Batch-accounts beheren
       items:
-      - name: Batch CLI-sjablonen gebruiken
-        href: batch-cli-templates.md
-  - name: Batch Node.js-SDK gebruiken
-    href: batch-nodejs-get-started.md
+        - name: Batch-accounts beheren met de portal
+          href: batch-account-create-portal.md
+        - name: Batch-accounts beheren met Batch Management .NET
+          href: batch-management-dotnet.md
+    - name: Verifiëren met Azure AD
+      items:
+        - name: Azure AD met Batch-service
+          href: batch-aad-auth.md
+        - name: Azure AD met Batch Management
+          href: batch-aad-auth-management.md
+    - name: Toepassingspakketten maken
+      href: batch-application-packages.md
+    - name: Pools maken en beheren
+      items:
+        - name: Compute-knooppunten automatisch schalen
+          href: batch-automatic-scaling.md
+        - name: Een VM-grootte voor rekenknooppunten kiezen
+          href: batch-pool-vm-sizes.md
+        - name: Toegang tot rekenknooppunten configureren
+          href: pool-endpoint-configuration.md
+        - name: Een pool maken met een aangepaste installatiekopie
+          href: batch-custom-images.md
+        - name: Een pool in een virtueel netwerk maken
+          href: batch-virtual-network.md
+        - name: Azure-bestandsshare koppelen
+          href: pool-file-shares.md
+        - name: RDMA- of GPU-exemplaren gebruiken
+          href: batch-pool-compute-intensive-sizes.md
+        - name: Rekenknooppunten in Linux gebruiken
+          href: batch-linux-nodes.md
+        - name: Virtuele machines met lage prioriteit gebruiken
+          href: batch-low-pri-vms.md
+        - name: Controleren op pool- en knooppuntfouten
+          href: batch-pool-node-error-checking.md
+    - name: Een CI/CD-pijplijn maken voor Batch
+      href: batch-ci-cd.md
+    - name: Taken beheren
+      items:
+        - name: Taken voor taakvoorbereiding- en -voltooiing
+          href: batch-job-prep-release.md
+        - name: Gelijktijdige knooppunttaken
+          href: batch-parallel-node-tasks.md
+        - name: Taakafhankelijkheden
+          href: batch-task-dependencies.md
+        - name: Gebruikersaccounts voor het uitvoeren van taken
+          href: batch-user-accounts.md
+        - name: Een groot aantal taken indienen
+          href: large-number-tasks.md
+    - name: Bronbestanden maken
+      href: resource-files.md
+    - name: Taken persistent maken
+      href: batch-task-output.md
+      items:
+        - name: Uitvoer met de Batch-API behouden
+          href: batch-task-output-files.md
+        - name: Uitvoer behouden met File Conventions-bibliotheek
+          href: batch-task-output-file-conventions.md
+    - name: Batch-oplossingen controleren
+      href: monitoring-overview.md
+      items:
+        - name: Metrische gegevens en diagnostische logboeken gebruiken
+          href: batch-diagnostics.md
+        - name: Controleren met behulp van Application Insights
+          href: monitor-application-insights.md
+        - name: Resources per status tellen
+          href: batch-get-resource-counts.md
+        - name: Efficiënt query's uitvoeren op resources
+          href: batch-efficient-list-queries.md
+    - name: Scripthulpprogramma's gebruiken
+      items:
+        - name: Azure PowerShell gebruiken
+          href: batch-powershell-cmdlets-get-started.md
+        - name: Azure CLI gebruiken
+          href: batch-cli-get-started.md
+          items:
+            - name: Batch CLI-sjablonen gebruiken
+              href: batch-cli-templates.md
+    - name: Batch Node.js-SDK gebruiken
+      href: batch-nodejs-get-started.md
 - name: Workloads uitvoeren
   items:
-  - name: MPI-taken
-    href: batch-mpi.md
-  - name: Containerwerkbelastingen
-    href: batch-docker-container-workloads.md
-  - name: Rendering
-    items:
-    - name: Weergeven met Azure
-      href: batch-rendering-service.md
-    - name: VM-installatiekopieën weergeven
-      href: batch-rendering-applications.md
-    - name: Mogelijkheden voor weergave in batches
-      href: batch-rendering-functionality.md
-    - name: Batch Rendering gebruiken
-      href: batch-rendering-using.md
-    - name: Render Managers gebruiken
-      href: batch-rendering-render-managers.md
-    - name: Naslaginformatie voor weergavetoepassing
-      href: batch-rendering-application-reference.md
-    - name: Opslag en gegevensverplaatsing
-      href: batch-rendering-storage-data-movement.md
-    - name: Weergave-architecturen
-      href: batch-rendering-architectures.md
-  - name: Gegevensverwerking met Batch en Data Factory
-    href: ../data-factory/transform-data-using-dotnet-custom-activity.md?toc=%2fazure%2fbatch%2ftoc.json
+    - name: MPI-taken
+      href: batch-mpi.md
+    - name: Containerwerkbelastingen
+      href: batch-docker-container-workloads.md
+    - name: Rendering
+      items:
+        - name: Weergeven met Azure
+          href: batch-rendering-service.md
+        - name: VM-installatiekopieën weergeven
+          href: batch-rendering-applications.md
+        - name: Mogelijkheden voor weergave in batches
+          href: batch-rendering-functionality.md
+        - name: Batch Rendering gebruiken
+          href: batch-rendering-using.md
+        - name: Render Managers gebruiken
+          href: batch-rendering-render-managers.md
+        - name: Naslaginformatie voor weergavetoepassing
+          href: batch-rendering-application-reference.md
+        - name: Opslag en gegevensverplaatsing
+          href: batch-rendering-storage-data-movement.md
+        - name: Weergave-architecturen
+          href: batch-rendering-architectures.md
+    - name: Gegevensverwerking met Batch en Data Factory
+      href: ../data-factory/transform-data-using-dotnet-custom-activity.md?toc=%2fazure%2fbatch%2ftoc.json
 - name: Naslaginformatie
   items:
-  - name: Azure-CLI
-    href: /cli/azure/batch
-  - name: Azure PowerShell
-    href: /powershell/module/az.batch
-  - name: .NET
-    href: /dotnet/api/overview/azure/batch
-  - name: Java
-    href: /java/api/overview/azure/batch
-  - name: Node.js
-    href: /javascript/api/overview/azure/batch
-  - name: Python
-    href: /python/api/overview/azure/batch
-  - name: REST
-    items:
-    - name: Batch-service
-      href: /rest/api/batchservice
-    - name: Batch-beheer
-      href: /rest/api/batchmanagement/
-  - name: Resource Manager-sjabloon
-    href: /azure/templates/microsoft.batch/allversions
-  - name: Batch-analyse
-    href: batch-analytics.md
-    items:
-    - name: Gebeurtenis pool maken
-      href: batch-pool-create-event.md
-    - name: Gebeurtenis pool verwijderen starten
-      href: batch-pool-delete-start-event.md
-    - name: Gebeurtenis pool verwijderen voltooid
-      href: batch-pool-delete-complete-event.md
-    - name: Gebeurtenis formaat pool wijzigen starten
-      href: batch-pool-resize-start-event.md
-    - name: Gebeurtenis formaat pool wijzigen voltooid
-      href: batch-pool-resize-complete-event.md
-    - name: Gebeurtenis taak starten
-      href: batch-task-start-event.md
-    - name: Gebeurtenis taak voltooid
-      href: batch-task-complete-event.md
-    - name: Gebeurtenis taak mislukt
-      href: batch-task-fail-event.md
-  - name: Omgevingsvariabelen Batch-rekenknooppunt
-    href: batch-compute-node-environment-variables.md
+    - name: Azure-CLI
+      href: /cli/azure/batch
+    - name: Azure PowerShell
+      href: /powershell/module/az.batch
+    - name: .NET
+      href: /dotnet/api/overview/azure/batch
+    - name: Java
+      href: /java/api/overview/azure/batch
+    - name: Node.js
+      href: /javascript/api/overview/azure/batch
+    - name: Python
+      href: /python/api/overview/azure/batch
+    - name: REST
+      items:
+        - name: Batch-service
+          href: /rest/api/batchservice
+        - name: Batch-beheer
+          href: /rest/api/batchmanagement/
+    - name: Resource Manager-sjabloon
+      href: /azure/templates/microsoft.batch/allversions
+    - name: Batch-analyse
+      href: batch-analytics.md
+      items:
+        - name: Gebeurtenis pool maken
+          href: batch-pool-create-event.md
+        - name: Gebeurtenis pool verwijderen starten
+          href: batch-pool-delete-start-event.md
+        - name: Gebeurtenis pool verwijderen voltooid
+          href: batch-pool-delete-complete-event.md
+        - name: Gebeurtenis formaat pool wijzigen starten
+          href: batch-pool-resize-start-event.md
+        - name: Gebeurtenis formaat pool wijzigen voltooid
+          href: batch-pool-resize-complete-event.md
+        - name: Gebeurtenis taak starten
+          href: batch-task-start-event.md
+        - name: Gebeurtenis taak voltooid
+          href: batch-task-complete-event.md
+        - name: Gebeurtenis taak mislukt
+          href: batch-task-fail-event.md
+    - name: Omgevingsvariabelen Batch-rekenknooppunt
+      href: batch-compute-node-environment-variables.md
 - name: Resources
   items:
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/
-  - name: Batch-community
-    href: https://github.com/Azure/Batch
-  - name: Batch Shipyard
-    href: https://github.com/Azure/batch-shipyard
-  - name: Blog
-    href: https://blogs.technet.microsoft.com/windowshpc/
-  - name: HPC in Azure
-    href: https://docs.microsoft.com/azure/architecture/topics/high-performance-computing/
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/batch/
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Resource Manager-sjabloon
-    href: /azure/templates/microsoft.batch/batchaccounts
-  - name: Service-updates
-    href: https://azure.microsoft.com/updates/?product=batch&updatetype=&platform=
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-batch
-  - name: Video's
-    href: https://azure.microsoft.com/documentation/videos/index/?services=batch
-ms.openlocfilehash: ccf0c1683f8c567aaceee1f38a020aa5bd2cab6c
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59790940"
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Batch-community
+      href: 'https://github.com/Azure/Batch'
+    - name: Batch Shipyard
+      href: 'https://github.com/Azure/batch-shipyard'
+    - name: Blog
+      href: 'https://blogs.technet.microsoft.com/windowshpc/'
+    - name: HPC in Azure
+      href: 'https://docs.microsoft.com/azure/architecture/topics/high-performance-computing/'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/batch/'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Resource Manager-sjabloon
+      href: /azure/templates/microsoft.batch/batchaccounts
+    - name: Service-updates
+      href: 'https://azure.microsoft.com/updates/?product=batch&updatetype=&platform='
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-batch'
+    - name: Video's
+      href: 'https://azure.microsoft.com/documentation/videos/index/?services=batch'
