--- a/articles/batch/index.yml
+++ b/articles/batch/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: cc30c4552cfa672121a5e7fc520fb4412237b7e9
-ms.sourcegitcommit: a8948ddcbaaa22bccbb6f187b20720eba7a17edc
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 02/21/2019
-ms.locfileid: "56591686"
 documentType: LandingData
 title: Documentatie over Batch
 metadata:
-  title: Documentatie voor Batch - zelfstudies, API-verwijzing | Microsoft Docs
-  description: In Batch kunt u grootschalige parallelle en HPC-toepassingen (High Performance Computing-toepassingen) efficiënt in de cloud uitvoeren. Definieer de Azure-rekenresources om uw toepassingen parallel of op schaal uit te voeren zonder de infrastructuur handmatig te hoeven configureren of beheren. Plan rekenintensieve taken en voeg dynamisch rekenresources toe, of verwijder deze weer, op basis van uw vereisten. Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u Azure Batch gebruikt.
+  title: 'Documentatie voor Batch - zelfstudies, API-verwijzing | Microsoft Docs'
+  description: 'In Batch kunt u grootschalige parallelle en HPC-toepassingen (High Performance Computing-toepassingen) efficiënt in de cloud uitvoeren. Definieer de Azure-rekenresources om uw toepassingen parallel of op schaal uit te voeren zonder de infrastructuur handmatig te hoeven configureren of beheren. Plan rekenintensieve taken en voeg dynamisch rekenresources toe, of verwijder deze weer, op basis van uw vereisten. Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u Azure Batch gebruikt.'
   services: batch
   author: czeumault
   manager: carolz
@@ -20,58 +14,58 @@ metadata:
   ms.date: 11/30/2017
   ms.author: carolz
 abstract:
-  description: In Batch kunt u grootschalige parallelle en HPC-toepassingen (High Performance Computing-toepassingen) efficiënt in de cloud uitvoeren. Definieer de Azure-rekenresources om uw toepassingen parallel of op schaal uit te voeren zonder de infrastructuur handmatig te hoeven configureren of beheren. Plan rekenintensieve taken en voeg dynamisch rekenresources toe, of verwijder deze weer, op basis van uw vereisten. Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u Azure Batch gebruikt.
+  description: 'In Batch kunt u grootschalige parallelle en HPC-toepassingen (High Performance Computing-toepassingen) efficiënt in de cloud uitvoeren. Definieer de Azure-rekenresources om uw toepassingen parallel of op schaal uit te voeren zonder de infrastructuur handmatig te hoeven configureren of beheren. Plan rekenintensieve taken en voeg dynamisch rekenresources toe, of verwijder deze weer, op basis van uw vereisten. Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u Azure Batch gebruikt.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Leer hoe u uw eerste Batch-taak in Azure uitvoert.
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_cligeneric.svg
-      text: Azure-CLI
-      href: quick-create-cli
-    - image:
-        src: https://docs.microsoft.com/media/common/i_portal.svg
-      text: Azure-portal
-      href: quick-create-portal
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_NET.svg
-      text: .NET
-      href: quick-run-dotnet
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_python.svg
-      text: Python
-      href: quick-run-python
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Leer hoe u in Batch rekenintensieve workloads uitvoert.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: Leer hoe u uw eerste Batch-taak in Azure uitvoert.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_cligeneric.svg'
+            text: Azure-CLI
+            href: quick-create-cli
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_portal.svg'
+            text: Azure-portal
+            href: quick-create-portal
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_NET.svg'
+            text: .NET
+            href: quick-run-dotnet
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_python.svg'
+            text: Python
+            href: quick-run-python
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="tutorial-parallel-dotnet">Parallelle bestandsverwerking met de .NET-SDK</a>
-    - html: <a href="tutorial-parallel-python">Parallelle bestandsverwerking met de Python-SDK</a>
-    - html: <a href="tutorial-rendering-cli">Scènes weergeven met Arnold</a>
-    - html: <a href="tutorial-r-doazureparallel">Parallelle R-simulatie</a>
-- title: Voorbeelden
-  items:
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: Leer hoe u in Batch rekenintensieve workloads uitvoert.
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="tutorial-parallel-dotnet">Parallelle bestandsverwerking met de .NET-SDK</a>
+          - html: <a href="tutorial-parallel-python">Parallelle bestandsverwerking met de Python-SDK</a>
+          - html: <a href="tutorial-rendering-cli">Scènes weergeven met Arnold</a>
+          - html: <a href="tutorial-r-doazureparallel">Parallelle R-simulatie</a>
+  - title: Voorbeelden
     items:
-    - html: <a href="cli-samples">Azure-CLI</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="cli-samples">Azure-CLI</a>
+  - title: Naslaginformatie
     items:
-    - title: Opdrachtregel
-      html: <p><a href="/cli/azure/batch">Azure-CLI</a></p><p><a href="/powershell/module/az.batch">Azure PowerShell</a></p>
-    - title: Talen
-      html: <p><a href="/dotnet/api/overview/azure/batch">.NET</a></p><p><a href="/java/api/overview/azure/batch">Java</a></p><p><a href="/javascript/api/overview/azure/batch">Node.js</a></p><p><a href="/python/api/overview/azure/batch">Python</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/batchservice">REST API voor Batch-service</a></p><p><a href="/rest/api/batchmanagement/">REST API voor Batch-beheer</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Opdrachtregel
+            html: <p><a href="/cli/azure/batch">Azure-CLI</a></p><p><a href="/powershell/module/az.batch">Azure PowerShell</a></p>
+          - title: Talen
+            html: <p><a href="/dotnet/api/overview/azure/batch">.NET</a></p><p><a href="/java/api/overview/azure/batch">Java</a></p><p><a href="/javascript/api/overview/azure/batch">Node.js</a></p><p><a href="/python/api/overview/azure/batch">Python</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/batchservice">REST API voor Batch-service</a></p><p><a href="/rest/api/batchmanagement/">REST API voor Batch-beheer</a></p>
