--- a/articles/chef/toc.yml
+++ b/articles/chef/toc.yml
@@ -1,55 +1,48 @@
-items:
 - name: Documentatie over Chef Software op Azure
   href: ./index.yml
 - name: Overzicht
   items:
-  - name: Informatie over Chef op Azure
-    href: ./chef-overview.md
-  - name: Informatie over Habitat op Azure
-    href: ./chef-habitat-overview.md
-  - name: Informatie over InSpec op Azure
-    href: ./chef-inspec-overview.md
+    - name: Informatie over Chef op Azure
+      href: ./chef-overview.md
+    - name: Informatie over Habitat op Azure
+      href: ./chef-habitat-overview.md
+    - name: Informatie over InSpec op Azure
+      href: ./chef-inspec-overview.md
 - name: Snelstartgidsen
-  items:
-  - name: Chef
-    items:
-    - name: Chef installeren met behulp van Azure Portal
-      href: ./chef-extension-portal.md
-    expanded: true
   expanded: true
+  items:
+    - name: Chef
+      expanded: true
+      items:
+        - name: Chef installeren met behulp van Azure Portal
+          href: ./chef-extension-portal.md
 - name: Zelfstudies
   items:
-  - name: Chef
-    items:
-    - name: Een Windows-VM maken
-      href: /azure/virtual-machines/windows/chef-automation
+    - name: Chef
+      items:
+        - name: Een Windows-VM maken
+          href: /azure/virtual-machines/windows/chef-automation
 - name: Naslaginformatie
   items:
-  - name: Azure Chef-extensie
-    href: https://docs.chef.io/azure_portal.html#azure-chef-extension
+    - name: Azure Chef-extensie
+      href: 'https://docs.chef.io/azure_portal.html#azure-chef-extension'
 - name: Resources
   items:
-  - name: Chef Automate
-    items:
-    - name: Overzicht van Chef Automate
-      href: https://docs.chef.io/chef_automate.html
-    - name: Installatiehandleiding voor Chef Automate
-      href: https://docs.chef.io/install_chef_automate.html
-    - name: Chef Automate op Azure Marketplace
-      href: https://azuremarketplace.microsoft.com/en-us/marketplace/apps/chef-software.chef-automate
-  - name: Nieuws over Chef Software
-    items:
-    - name: Blog van Chef Software
-      href: https://blog.chef.io/
+    - name: Chef Automate
+      items:
+        - name: Overzicht van Chef Automate
+          href: 'https://docs.chef.io/chef_automate.html'
+        - name: Installatiehandleiding voor Chef Automate
+          href: 'https://docs.chef.io/install_chef_automate.html'
+        - name: Chef Automate op Azure Marketplace
+          href: 'https://azuremarketplace.microsoft.com/en-us/marketplace/apps/chef-software.chef-automate'
+    - name: Nieuws over Chef Software
+      items:
+        - name: Blog van Chef Software
+          href: 'https://blog.chef.io/'
 - name: Hulpprogramma's
   items:
-  - name: Chef Azure DevOps Services-extensie
-    href: https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-chef-tasks
-  - name: Habitat Azure DevOps Services-extensie
-    href: https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-habitat-tasks
-ms.openlocfilehash: 11d516e487ac2328da1ad397e127d61cf3da9c3b
-ms.sourcegitcommit: f3bd5c17a3a189f144008faf1acb9fabc5bc9ab7
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 09/10/2018
-ms.locfileid: "44300916"
+    - name: Chef Azure DevOps Services-extensie
+      href: 'https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-chef-tasks'
+    - name: Habitat Azure DevOps Services-extensie
+      href: 'https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-habitat-tasks'
