--- a/articles/cognitive-services/Anomaly-Detector/toc.yml
+++ b/articles/cognitive-services/Anomaly-Detector/toc.yml
@@ -1,51 +1,44 @@
-items:
 - name: Documentatie voor Anomaly Detector
   href: index.yml
 - name: Overzicht
-  items:
-  - name: Wat is de Anomaly Detector-API?
-    href: overview.md
   expanded: true
+  items:
+    - name: Wat is de Anomaly Detector-API?
+      href: overview.md
 - name: Snelstartgidsen
-  items:
-  - name: Afwijkingen in uw gegevens detecteren
-    items:
-    - name: C# gebruiken
-      href: quickstarts/detect-data-anomalies-csharp.md
-    - name: Java gebruiken
-      href: quickstarts/detect-data-anomalies-java.md
-    - name: Python gebruiken
-      href: quickstarts/detect-data-anomalies-python.md
   expanded: true
+  items:
+    - name: Afwijkingen in uw gegevens detecteren
+      items:
+        - name: 'C# gebruiken'
+          href: quickstarts/detect-data-anomalies-csharp.md
+        - name: Java gebruiken
+          href: quickstarts/detect-data-anomalies-java.md
+        - name: Python gebruiken
+          href: quickstarts/detect-data-anomalies-python.md
 - name: Handleidingen
   items:
-  - name: Afwijkingen in uw gegevens identificeren
-    href: how-to/identify-anomalies.md
+    - name: Afwijkingen in uw gegevens identificeren
+      href: how-to/identify-anomalies.md
 - name: Concepten
   items:
-  - name: Best practices voor de Anomaly Detector-API
-    href: concepts/anomaly-detection-best-practices.md
+    - name: Best practices voor de Anomaly Detector-API
+      href: concepts/anomaly-detection-best-practices.md
 - name: Naslaginformatie
   items:
-  - name: Naslaginformatie over REST-API
-    href: https://aka.ms/anomaly-detector-rest-api-ref
-  - name: SDK's
-    items:
-    - name: .NET
-      href: https://aka.ms/anomaly-detector-dotnet-ref
+    - name: Naslaginformatie over REST-API
+      href: 'https://aka.ms/anomaly-detector-rest-api-ref'
+    - name: SDK's
+      items:
+        - name: .NET
+          href: 'https://aka.ms/anomaly-detector-dotnet-ref'
 - name: Resources
   items:
-  - name: Prijzen
-    href: https://aka.ms/anomaly-detector-pricing
-  - name: Regionale beschikbaarheid
-    href: https://aka.ms/anomaly-detector-region
-  - name: Referentiearchitectuur voor de oplossing
-    href: https://azure.microsoft.com/solutions/architecture/anomaly-detector-process/
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-anomaly-detection
-ms.openlocfilehash: 84e9317e3eb20181dcf1003718eb33acddbd84fa
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59786978"
+    - name: Prijzen
+      href: 'https://aka.ms/anomaly-detector-pricing'
+    - name: Regionale beschikbaarheid
+      href: 'https://aka.ms/anomaly-detector-region'
+    - name: Referentiearchitectuur voor de oplossing
+      href: 'https://azure.microsoft.com/solutions/architecture/anomaly-detector-process/'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-anomaly-detection'
