--- a/articles/cognitive-services/Labs/URL-Preview/index.yml
+++ b/articles/cognitive-services/Labs/URL-Preview/index.yml
@@ -1,10 +1,4 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: ceffd2a6e4bfcfac167ab26de757286c6905e9b3
-ms.sourcegitcommit: cc4fdd6f0f12b44c244abc7f6bc4b181a2d05302
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 09/25/2018
-ms.locfileid: "47096464"
 documentType: LandingData
 title: Documentatie voor Project URL Preview
 metadata:
@@ -18,6 +12,6 @@ metadata:
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 03/19/2018
-  ms.author: rosh, v-gedod
+  ms.author: 'rosh, v-gedod'
 abstract:
-  description: Bing URL-voorbeeld-API haalt beknopte informatie op over een doel-URL, inclusief beschrijving, de vlag IsFamilyFriendly, representatieve afbeelding en link naar de pagina.
+  description: 'Bing URL-voorbeeld-API haalt beknopte informatie op over een doel-URL, inclusief beschrijving, de vlag IsFamilyFriendly, representatieve afbeelding en link naar de pagina.'
