--- a/articles/cognitive-services/custom-decision-service/index.yml
+++ b/articles/cognitive-services/custom-decision-service/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 6768d2a313a1d781c6db23dff404aed2efc99f31
-ms.sourcegitcommit: 95822822bfe8da01ffb061fe229fbcc3ef7c2c19
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 01/29/2019
-ms.locfileid: "55228335"
 documentType: LandingData
 title: Documentatie voor Custom Decision Service
 metadata:
-  title: Documentatie voor Custom Decision Service - zelfstudies, API-verwijzing - Azure Cognitive Services | Microsoft Docs
-  meta.description: Learn how to create a contextual, decision-making API that improves with experience
+  title: 'Documentatie voor Custom Decision Service - zelfstudies, API-verwijzing - Azure Cognitive Services | Microsoft Docs'
+  meta.description: 'Learn how to create a contextual, decision-making API that improves with experience'
   services: cognitive-services
   author: noellelacharite
   manager: nolachar
@@ -21,34 +15,34 @@ metadata:
   ms.date: 05/01/2018
   ms.author: nolachar
 abstract:
-  description: Met Azure Custom Decision Service kunt u intelligente systemen bouwen met een op de cloud gebaseerde, contextuele API voor besluitvorming die steeds nauwkeuriger wordt door te leren. Custom Decision Service maakt gebruik van de kracht van versterkend leren en past de inhoud in uw toepassing aan om de betrokkenheid van gebruikers te maximaliseren. Het systeem gebruikt in realtime feedback van gebruikers in de beslissingen en reageert in minuten op opkomende trends en belangrijke verhalen. Leer via deze snelstarts hoe u uw toepassing registreert en de API aanroept vanuit een browser of app. Personaliseer dan uw artikelen en geef uw inhoud weer als ‘functies’ die klaar zijn voor machine learning met de zelfstudies.
+  description: 'Met Azure Custom Decision Service kunt u intelligente systemen bouwen met een op de cloud gebaseerde, contextuele API voor besluitvorming die steeds nauwkeuriger wordt door te leren. Custom Decision Service maakt gebruik van de kracht van versterkend leren en past de inhoud in uw toepassing aan om de betrokkenheid van gebruikers te maximaliseren. Het systeem gebruikt in realtime feedback van gebruikers in de beslissingen en reageert in minuten op opkomende trends en belangrijke verhalen. Leer via deze snelstarts hoe u uw toepassing registreert en de API aanroept vanuit een browser of app. Personaliseer dan uw artikelen en geef uw inhoud weer als ‘functies’ die klaar zijn voor machine learning met de zelfstudies.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: 'Registreer uw toepassing en roep de Azure Custom Decision Service-API rechtstreeks vanuit uw browser of smartphone-app aan:'
-  - type: list
-    style: unordered
+  - title: QuickStarts van vijf minuten
     items:
-    - html: <a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-get-started-register">Uw toepassing registreren</a>
-    - html: <a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-get-started-browser">API aanroepen vanuit een browser</a>
-    - html: <a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-get-started-app">API aanroepen vanuit een app</a>
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: 'Personaliseer uw artikelen op de voorpagina van een website en specificeer uw inhoud als ‘functies’ die klaar zijn voor machine learning met de Custom Decision Service-API’s:'
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Registreer uw toepassing en roep de Azure Custom Decision Service-API rechtstreeks vanuit uw browser of smartphone-app aan:'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-get-started-register">Uw toepassing registreren</a>
+          - html: <a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-get-started-browser">API aanroepen vanuit een browser</a>
+          - html: <a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-get-started-app">API aanroepen vanuit een app</a>
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-tutorial-news">Persoonlijke aanpassingen van artikel</a>
-    - html: <a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-tutorial-ml">Machine Learning</a>
-- title: Naslaginformatie
-  items:
-  - type: paragraph
-    text: Deze API's werken samen. Er zijn drie API’s in de API-verwijzing die bijdragen aan de aangepaste besluitvorming. De Experimenten-API gebruikt de logboekbestanden die worden gegenereerd door de LogDownloader-API. Gedetailleerde scenario's worden in de artikelen gedeeld.
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Personaliseer uw artikelen op de voorpagina van een website en specificeer uw inhoud als ‘functies’ die klaar zijn voor machine learning met de Custom Decision Service-API’s:'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-tutorial-news">Persoonlijke aanpassingen van artikel</a>
+          - html: <a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-tutorial-ml">Machine Learning</a>
+  - title: Naslaginformatie
     items:
-    - title: API's
-      html: <p><a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-api-reference">API</a></p><p><a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-experimentation-reference">Experimenten</a></p><p><a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-log-downloader-reference">LogDownloader</a><p>
+      - type: paragraph
+        text: Deze API's werken samen. Er zijn drie API’s in de API-verwijzing die bijdragen aan de aangepaste besluitvorming. De Experimenten-API gebruikt de logboekbestanden die worden gegenereerd door de LogDownloader-API. Gedetailleerde scenario's worden in de artikelen gedeeld.
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: API's
+            html: <p><a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-api-reference">API</a></p><p><a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-experimentation-reference">Experimenten</a></p><p><a href="/azure/cognitive-services/custom-decision-service/custom-decision-service-log-downloader-reference">LogDownloader</a><p>
