--- a/articles/cost-management/index.yml
+++ b/articles/cost-management/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f14bcd11a5769e5057fadca198ac57110edf8ef5
-ms.sourcegitcommit: 9fb6f44dbdaf9002ac4f411781bf1bd25c191e26
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 12/08/2018
-ms.locfileid: "53099270"
 documentType: LandingData
 title: Documentatie voor Kostenbeheer van Azure
 metadata:
-  title: Documentatie voor Kostenbeheer van Azure - zelfstudies, API-verwijzing | Microsoft Docs
-  description: Azure Cost Management is een oplossing voor kostenbeheer waarmee u uw Azure-uitgaven kunt bijhouden en bewaken, en het resourcegebruik kunt optimaliseren. Leer aan de hand van onze snelstarts en zelfstudies hoe u kosten analyseert, budgetten maakt en beheert, gegevens exporteert, en aanbevelingen bekijkt en hier actie op onderneemt.
+  title: 'Documentatie voor Kostenbeheer van Azure - zelfstudies, API-verwijzing | Microsoft Docs'
+  description: 'Azure Cost Management is een oplossing voor kostenbeheer waarmee u uw Azure-uitgaven kunt bijhouden en bewaken, en het resourcegebruik kunt optimaliseren. Leer aan de hand van onze snelstarts en zelfstudies hoe u kosten analyseert, budgetten maakt en beheert, gegevens exporteert, en aanbevelingen bekijkt en hier actie op onderneemt.'
   services: cost-management
   author: bandersmsft
   manager: dougeby
@@ -20,38 +14,38 @@ metadata:
   ms.date: 12/05/2018
   ms.author: banders
 abstract:
-  description: Azure Cost Management is een oplossing voor kostenbeheer waarmee u uw Azure-uitgaven kunt bijhouden en bewaken, en het resourcegebruik kunt optimaliseren. Leer aan de hand van onze snelstarts en zelfstudies hoe u kosten analyseert, budgetten maakt en beheert, gegevens exporteert, en aanbevelingen bekijkt en hier actie op onderneemt.
+  description: 'Azure Cost Management is een oplossing voor kostenbeheer waarmee u uw Azure-uitgaven kunt bijhouden en bewaken, en het resourcegebruik kunt optimaliseren. Leer aan de hand van onze snelstarts en zelfstudies hoe u kosten analyseert, budgetten maakt en beheert, gegevens exporteert, en aanbevelingen bekijkt en hier actie op onderneemt.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Leer hoe u met Azure Cost Management aan de slag gaat om binnen uw organisatie kosten te analyseren.
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_portal.svg
-      text: Kosten analyseren in Cost Management
-      href: quick-acm-cost-analysis
-- title: Stapsgewijze zelfstudies
-  items:
-  - type: paragraph
-    text: Leer hoe u met Azure Cost Management budgetten maakt, gegevens exporteert, en aanbevelingen bekijkt en hier actie op onderneemt.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: Leer hoe u met Azure Cost Management aan de slag gaat om binnen uw organisatie kosten te analyseren.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_portal.svg'
+            text: Kosten analyseren in Cost Management
+            href: quick-acm-cost-analysis
+  - title: Stapsgewijze zelfstudies
     items:
-    - html: <a href="tutorial-acm-create-budgets">Budgetten maken en beheren</a>
-    - html: <a href="tutorial-export-acm-data">Gegevens exporteren</a>
-    - html: <a href="tutorial-acm-opt-recommendations">Aanbevelingen bekijken en hier actie op ondernemen</a>
-- title: Uw vaardigheden ontwikkelen met Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: 'Leer hoe u met Azure Cost Management budgetten maakt, gegevens exporteert, en aanbevelingen bekijkt en hier actie op onderneemt.'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="tutorial-acm-create-budgets">Budgetten maken en beheren</a>
+          - html: <a href="tutorial-export-acm-data">Gegevens exporteren</a>
+          - html: <a href="tutorial-acm-opt-recommendations">Aanbevelingen bekijken en hier actie op ondernemen</a>
+  - title: Uw vaardigheden ontwikkelen met Microsoft Learn
     items:
-    - title: Kosten voorspellen en uw Azure-uitgaven optimaliseren
-      href: /learn/modules/predict-costs-and-optimize-spending/
-      image:
-        src: /learn/achievements/predict-costs-and-optimize-spending.svg
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-cost-management">Meer interactief leren...</a>
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Kosten voorspellen en uw Azure-uitgaven optimaliseren
+            href: /learn/modules/predict-costs-and-optimize-spending/
+            image:
+              src: /learn/achievements/predict-costs-and-optimize-spending.svg
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-cost-management">Meer interactief leren...</a>
