--- a/articles/databox/index.yml
+++ b/articles/databox/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 5191d259c24a30b6e435fdb2adb93a4345f6ae77
-ms.sourcegitcommit: 33091f0ecf6d79d434fa90e76d11af48fd7ed16d
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 01/09/2019
-ms.locfileid: "54159091"
 documentType: LandingData
 title: Documentatie voor Azure Data Box - Offline overdracht
 metadata:
   title: Documentatie voor Azure Data Box - Offline overdracht
-  description: Gebruik de Data Box-apparaten voor offline gegevensoverdracht naar Azure wanneer u wordt beperkt door tijd, het netwerk of de kosten.
+  description: 'Gebruik de Data Box-apparaten voor offline gegevensoverdracht naar Azure wanneer u wordt beperkt door tijd, het netwerk of de kosten.'
   services: databox
   author: alkohli
   manager: twooley
@@ -19,32 +13,32 @@ metadata:
   ms.date: 01/09/2019
   ms.author: alkohli
 abstract:
-  description: Met Azure Data Box-producten kunt u snel, goedkoop en betrouwbaar honderden terabytes aan gegevens overdragen naar Azure. Gebruik de Data Box-apparaten voor offlineoverdracht wanneer u wordt beperkt door tijd, het netwerk of de kosten.<p>Afhankelijk van de gegevensgrootte kiest u Data Box Disk, Data Box, of Data Box Heavy <SUP>(preview)</SUP>. Voor elk apparaat wordt de overdracht naar Azure uitgevoerd in vier stappen (bestellen, ontvangen, gegevens naar apparaat kopiëren en apparaat retourneren aan Azure). In Azure Datacenter worden gegevens geüpload en vervolgens gewist.</p><p>Gebruik onze snelstartgidsen en zelfstudies voor meer informatie over hoe u Data Box kunt gebruiken voor uw offlinegegevensoverdracht.</p>
+  description: 'Met Azure Data Box-producten kunt u snel, goedkoop en betrouwbaar honderden terabytes aan gegevens overdragen naar Azure. Gebruik de Data Box-apparaten voor offlineoverdracht wanneer u wordt beperkt door tijd, het netwerk of de kosten.<p>Afhankelijk van de gegevensgrootte kiest u Data Box Disk, Data Box, of Data Box Heavy <SUP>(preview)</SUP>. Voor elk apparaat wordt de overdracht naar Azure uitgevoerd in vier stappen (bestellen, ontvangen, gegevens naar apparaat kopiëren en apparaat retourneren aan Azure). In Azure Datacenter worden gegevens geüpload en vervolgens gewist.</p><p>Gebruik onze snelstartgidsen en zelfstudies voor meer informatie over hoe u Data Box kunt gebruiken voor uw offlinegegevensoverdracht.</p>'
 sections:
-- title: Snelstartgids
-  items:
-  - type: list
-    style: icon48
+  - title: Snelstartgids
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_quick-start.svg
-      text: Data Box instellen in de Azure-portal
-      href: /azure/databox/data-box-quickstart-portal
-    - image:
-        src: https://docs.microsoft.com/media/common/i_quick-start.svg
-      text: Data Box Disk instellen in de Azure-portal
-      href: /azure/databox/data-box-disk-quickstart-portal
-    - image:
-        src: https://docs.microsoft.com/media/common/i_quick-start.svg
-      text: Aanmelden voor Data Box Heavy <SUP>(preview)</SUP>
-      href: /azure/databox/data-box-heavy-overview#sign-up
-- title: Zelfstudies
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_quick-start.svg'
+            text: Data Box instellen in de Azure-portal
+            href: /azure/databox/data-box-quickstart-portal
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_quick-start.svg'
+            text: Data Box Disk instellen in de Azure-portal
+            href: /azure/databox/data-box-disk-quickstart-portal
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_quick-start.svg'
+            text: Aanmelden voor Data Box Heavy <SUP>(preview)</SUP>
+            href: '/azure/databox/data-box-heavy-overview#sign-up'
+  - title: Zelfstudies
     items:
-    - title: Voor Data Box
-      html: <p><a href="/azure/databox/data-box-deploy-ordered">Azure Data Box bestellen</a></p><p><a href="/azure/databox/data-box-deploy-set-up">Azure Data Box bekabelen en verbinden</a></p><p><a href="/azure/databox/data-box-deploy-copy-data">Gegevens naar Azure Data Box kopiëren</a></p><p><a href="/azure/databox/data-box-deploy-picked-up">Azure Data Box retourneren en de upload verifiëren</a></p>
-    - title: Voor Data Box Disk
-      html: <p><a href="/azure/databox/data-box-disk-deploy-ordered">Azure Data Box Disk bestellen</a></p><p><a href="/azure/databox/data-box-disk-deploy-set-up">Azure Data Box Disk uitpakken, aansluiten en ontgrendelen</a></p><p><a href="/azure/databox/data-box-disk-deploy-copy-data">Gegevens naar Azure Data Box Disk kopiëren</a></p><p><a href="/azure/databox/data-box-disk-deploy-picked-up">Azure Data Box Disk retourneren en de upload verifiëren</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Voor Data Box
+            html: <p><a href="/azure/databox/data-box-deploy-ordered">Azure Data Box bestellen</a></p><p><a href="/azure/databox/data-box-deploy-set-up">Azure Data Box bekabelen en verbinden</a></p><p><a href="/azure/databox/data-box-deploy-copy-data">Gegevens naar Azure Data Box kopiëren</a></p><p><a href="/azure/databox/data-box-deploy-picked-up">Azure Data Box retourneren en de upload verifiëren</a></p>
+          - title: Voor Data Box Disk
+            html: '<p><a href="/azure/databox/data-box-disk-deploy-ordered">Azure Data Box Disk bestellen</a></p><p><a href="/azure/databox/data-box-disk-deploy-set-up">Azure Data Box Disk uitpakken, aansluiten en ontgrendelen</a></p><p><a href="/azure/databox/data-box-disk-deploy-copy-data">Gegevens naar Azure Data Box Disk kopiëren</a></p><p><a href="/azure/databox/data-box-disk-deploy-picked-up">Azure Data Box Disk retourneren en de upload verifiëren</a></p>'
