--- a/articles/dev-spaces/index.yml
+++ b/articles/dev-spaces/index.yml
@@ -1,10 +1,4 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 5fc027e52d838a85e7b880e3dd0daf4438e850dc
-ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "57851988"
 documentType: LandingData
 title: Azure Dev Spaces
 metadata:
@@ -17,48 +11,47 @@ metadata:
   ms.date: 08/23/2018
   ms.author: zarhoads
 sections:
-- title: Een snelle, iteratieve Kubernetes-ontwikkelervaring voor teams
-  items:
-  - type: paragraph
-    text: Met minimale instelling van ontwikkelingsmachines kunt u rechtstreeks in Azure Kubernetes Service (AKS) herhaaldelijk containers uitvoeren en fouten hierin opsporen.  U kunt ook samenwerken met uw team in een gedeeld Kubernetes-cluster en end-to-end testen met andere onderdelen zonder afhankelijkheden te repliceren of na te bootsen. Met Azure Dev Spaces kunt u in Windows, Mac of Linux met bekende hulpprogramma's ontwikkelen zoals Visual Studio, Visual Studio Code of de opdrachtregel.
-  - type: markdown
-    text: >-
-      > [!IMPORTANT]
-
-      > Azure Dev Spaces is momenteel beschikbaar als preview-versie en wordt alleen ondersteund door AKS-clusters in de regio's **US - oost**, **US - oost 2**, **US - centraal**, **US - west 2**, **EU - noord**, **EU - west**, **Azië - zuidoost**, **Canada - centraal** en **Canada - oost**. Previews worden voor u beschikbaar gesteld op voorwaarde dat u akkoord gaat met de [aanvullende gebruiksvoorwaarden](https://azure.microsoft.com/support/legal/preview-supplemental-terms/). Sommige aspecten van deze functie worden mogelijk nog gewijzigd voordat de functie algemeen beschikbaar wordt.
-- title: Aan de slag in Azure Dev Spaces
-  items:
-  - type: paragraph
-    text: 'Selecteer een taalspecifieke handleiding om aan de slag te gaan:'
-  - type: list
-    style: icon48
+  - title: 'Een snelle, iteratieve Kubernetes-ontwikkelervaring voor teams'
     items:
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_java.svg
-      text: Java
-      href: quickstart-java.md
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_vs-code.svg
-      text: .NET en VS Code
-      href: quickstart-netcore.md
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_visual-studio.svg
-      text: .NET en Visual Studio
-      href: quickstart-netcore-visualstudio.md
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_nodejs.svg
-      text: Node.js
-      href: quickstart-nodejs.md
-- title: Hoe Azure Dev Spaces de ontwikkeling van Kubernetes vereenvoudigt
-  items:
-  - type: paragraph
-    text: Azure Dev Spaces helpt ontwikkelteams als volgt productiever op Kubernetes te werken
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Met minimale instelling van ontwikkelingsmachines kunt u rechtstreeks in Azure Kubernetes Service (AKS) herhaaldelijk containers uitvoeren en fouten hierin opsporen.  U kunt ook samenwerken met uw team in een gedeeld Kubernetes-cluster en end-to-end testen met andere onderdelen zonder afhankelijkheden te repliceren of na te bootsen. Met Azure Dev Spaces kunt u in Windows, Mac of Linux met bekende hulpprogramma''s ontwikkelen zoals Visual Studio, Visual Studio Code of de opdrachtregel.'
+      - type: markdown
+        text: |-
+          > [!IMPORTANT]
+          > Azure Dev Spaces is momenteel beschikbaar als preview-versie en wordt alleen ondersteund door AKS-clusters in de regio's **US - oost**, **US - oost 2**, **US - centraal**, **US - west 2**, **EU - noord**, **EU - west**, **Azië - zuidoost**, **Canada - centraal** en **Canada - oost**. Previews worden voor u beschikbaar gesteld op voorwaarde dat u akkoord gaat met de [aanvullende gebruiksvoorwaarden](https://azure.microsoft.com/support/legal/preview-supplemental-terms/). Sommige aspecten van deze functie worden mogelijk nog gewijzigd voordat de functie algemeen beschikbaar wordt.
+  - title: Aan de slag in Azure Dev Spaces
     items:
-    - text: Minimaliseer instellingen voor lokale ontwikkelingsmachines voor elk teamlid en werk rechtstreeks in AKS, een beheerde Kubernetes-cluster in Azure.
-    - text: Voer code herhaaldelijk uit voor een snelle foutopsporing rechtstreeks in Kubernetes met Visual Studio 2017 of Visual Studio Code.
-    - text: Genereer middelen voor 'configuratie als code' in Docker en Kubernetes om te gebruiken van ontwikkeling tot productie.
-    - text: Deel een beheerde Kubernetes-cluster met uw team en werk hier samen aan. Ontwikkel uw code in een geïsoleerde omgeving en voer end-to-end tests uit met andere onderdelen zonder dat u afhankelijkheden hoeft te repliceren of na te bootsen.
-  - type: markdown
-    text: '![](media/azure-dev-spaces/collaborate-graphic.gif)'
+      - type: paragraph
+        text: 'Selecteer een taalspecifieke handleiding om aan de slag te gaan:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_java.svg'
+            text: Java
+            href: quickstart-java.md
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_vs-code.svg'
+            text: .NET en VS Code
+            href: quickstart-netcore.md
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_visual-studio.svg'
+            text: .NET en Visual Studio
+            href: quickstart-netcore-visualstudio.md
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_nodejs.svg'
+            text: Node.js
+            href: quickstart-nodejs.md
+  - title: Hoe Azure Dev Spaces de ontwikkeling van Kubernetes vereenvoudigt
+    items:
+      - type: paragraph
+        text: Azure Dev Spaces helpt ontwikkelteams als volgt productiever op Kubernetes te werken
+      - type: list
+        style: unordered
+        items:
+          - text: 'Minimaliseer instellingen voor lokale ontwikkelingsmachines voor elk teamlid en werk rechtstreeks in AKS, een beheerde Kubernetes-cluster in Azure.'
+          - text: Voer code herhaaldelijk uit voor een snelle foutopsporing rechtstreeks in Kubernetes met Visual Studio 2017 of Visual Studio Code.
+          - text: Genereer middelen voor 'configuratie als code' in Docker en Kubernetes om te gebruiken van ontwikkeling tot productie.
+          - text: Deel een beheerde Kubernetes-cluster met uw team en werk hier samen aan. Ontwikkel uw code in een geïsoleerde omgeving en voer end-to-end tests uit met andere onderdelen zonder dat u afhankelijkheden hoeft te repliceren of na te bootsen.
+      - type: markdown
+        text: '![](media/azure-dev-spaces/collaborate-graphic.gif)'
