--- a/articles/dns/TOC.yml
+++ b/articles/dns/TOC.yml
@@ -1,158 +1,151 @@
-items:
 - name: Documentatie over DNS
   href: index.yml
 - name: Overzicht
   items:
-  - name: Wat is Azure DNS?
-    href: dns-overview.md
+    - name: Wat is Azure DNS?
+      href: dns-overview.md
 - name: Snelstartgidsen
-  items:
-  - name: Naamomzetting - portal
-    href: dns-getstarted-portal.md
-  - name: Naamomzetting - PowerShell
-    href: dns-getstarted-powershell.md
-  - name: Naamomzetting - CLI
-    href: dns-getstarted-cli.md
   expanded: true
+  items:
+    - name: Naamomzetting - portal
+      href: dns-getstarted-portal.md
+    - name: Naamomzetting - PowerShell
+      href: dns-getstarted-powershell.md
+    - name: Naamomzetting - CLI
+      href: dns-getstarted-cli.md
 - name: Zelfstudies
   items:
-  - name: Uw domein hosten in Azure DNS
-    href: dns-delegate-domain-azure-dns.md
-  - name: Aangepaste DNS-records voor een web-app maken
-    href: dns-web-sites-custom-domain.md
-  - name: Een persoonlijke DNS-zone en -record maken
-    href: private-dns-getstarted-powershell.md
-  - name: Aliasrecords voor Traffic Manager
-    href: tutorial-alias-tm.md
-  - name: Aliasrecords voor openbare IP-adressen
-    href: tutorial-alias-pip.md
-  - name: Aliasrecords voor zonerecords
-    href: tutorial-alias-rr.md
+    - name: Uw domein hosten in Azure DNS
+      href: dns-delegate-domain-azure-dns.md
+    - name: Aangepaste DNS-records voor een web-app maken
+      href: dns-web-sites-custom-domain.md
+    - name: Een persoonlijke DNS-zone en -record maken
+      href: private-dns-getstarted-powershell.md
+    - name: Aliasrecords voor Traffic Manager
+      href: tutorial-alias-tm.md
+    - name: Aliasrecords voor openbare IP-adressen
+      href: tutorial-alias-pip.md
+    - name: Aliasrecords voor zonerecords
+      href: tutorial-alias-rr.md
 - name: Voorbeelden
   items:
-  - name: Azure-CLI
-    href: cli-samples.md
+    - name: Azure-CLI
+      href: cli-samples.md
 - name: Concepten
   items:
-  - name: Zones en records
-    href: dns-zones-records.md
-  - name: Aliasrecords
-    href: dns-alias.md
-  - name: Delegatie met Azure DNS
-    href: dns-domain-delegation.md
-  - name: Veelgestelde vragen
-    href: dns-faq.md
-  - name: Persoonlijke DNS-zones gebruiken
-    href: private-dns-overview.md
-  - name: Scenario's voor persoonlijke DNS-zones
-    href: private-dns-scenarios.md
-  - name: DNS-statistieken en -waarschuwingen
-    href: dns-alerts-metrics.md
-  - name: Omgekeerde DNS-lookup
-    href: dns-reverse-dns-overview.md
-  - name: Herstel na noodgevallen met Azure DNS en Traffic Manager
-    href: ../networking/disaster-recovery-dns-traffic-manager.md
+    - name: Zones en records
+      href: dns-zones-records.md
+    - name: Aliasrecords
+      href: dns-alias.md
+    - name: Delegatie met Azure DNS
+      href: dns-domain-delegation.md
+    - name: Veelgestelde vragen
+      href: dns-faq.md
+    - name: Persoonlijke DNS-zones gebruiken
+      href: private-dns-overview.md
+    - name: Scenario's voor persoonlijke DNS-zones
+      href: private-dns-scenarios.md
+    - name: DNS-statistieken en -waarschuwingen
+      href: dns-alerts-metrics.md
+    - name: Omgekeerde DNS-lookup
+      href: dns-reverse-dns-overview.md
+    - name: Herstel na noodgevallen met Azure DNS en Traffic Manager
+      href: ../networking/disaster-recovery-dns-traffic-manager.md
 - name: Procedures
   items:
-  - name: Een persoonlijke DNS-zone en -record maken - Azure CLI
-    href: private-dns-getstarted-cli.md
-  - name: Aliasrecords voor web-apps met gelijke taakverdeling
-    href: dns-alias-appservice.md
-  - name: DNS-zones beheren
-    items:
-    - name: Azure Portal
-      href: dns-operations-dnszones-portal.md
-    - name: Azure PowerShell
-      href: dns-operations-dnszones.md
-    - name: Azure-CLI
-      href: dns-operations-dnszones-cli.md
-  - name: DNS-records beheren
-    items:
-    - name: Azure Portal
-      href: dns-operations-recordsets-portal.md
-    - name: Azure PowerShell
-      href: dns-operations-recordsets.md
-    - name: Azure-CLI
-      href: dns-operations-recordsets-cli.md
-  - name: Reverse-DNS beheren
-    items:
-    - name: Zones voor omgekeerde lookup hosten in Azure DNS
-      href: dns-reverse-dns-hosting.md
-    - name: Omgekeerde DNS-records voor Azure-services beheren
-      href: dns-reverse-dns-for-azure-services.md
-  - name: Een DNS-zonebestand importeren en exporteren
-    href: dns-import-export.md
-  - name: Een subdomein delegeren
-    href: delegate-subdomain.md
-  - name: Een subdomein delegeren met behulp van PowerShell
-    href: delegate-subdomain-ps.md
-  - name: Integreren met andere Azure-services
-    href: dns-for-azure-services.md
-  - name: DNS-zones en records beschermen
-    href: dns-protect-zones-recordsets.md
-  - name: DNS-bewerkingen automatiseren met de .NET-SDK
-    href: dns-sdk.md
-  - name: Aangepaste domeinen voor Azure-resources
-    href: dns-custom-domain.md
-  - name: Problemen oplossen
-    items:
-    - name: Handleiding voor het oplossen van problemen
-      href: dns-troubleshoot.md
+    - name: Een persoonlijke DNS-zone en -record maken - Azure CLI
+      href: private-dns-getstarted-cli.md
+    - name: Aliasrecords voor web-apps met gelijke taakverdeling
+      href: dns-alias-appservice.md
+    - name: DNS-zones beheren
+      items:
+        - name: Azure Portal
+          href: dns-operations-dnszones-portal.md
+        - name: Azure PowerShell
+          href: dns-operations-dnszones.md
+        - name: Azure-CLI
+          href: dns-operations-dnszones-cli.md
+    - name: DNS-records beheren
+      items:
+        - name: Azure Portal
+          href: dns-operations-recordsets-portal.md
+        - name: Azure PowerShell
+          href: dns-operations-recordsets.md
+        - name: Azure-CLI
+          href: dns-operations-recordsets-cli.md
+    - name: Reverse-DNS beheren
+      items:
+        - name: Zones voor omgekeerde lookup hosten in Azure DNS
+          href: dns-reverse-dns-hosting.md
+        - name: Omgekeerde DNS-records voor Azure-services beheren
+          href: dns-reverse-dns-for-azure-services.md
+    - name: Een DNS-zonebestand importeren en exporteren
+      href: dns-import-export.md
+    - name: Een subdomein delegeren
+      href: delegate-subdomain.md
+    - name: Een subdomein delegeren met behulp van PowerShell
+      href: delegate-subdomain-ps.md
+    - name: Integreren met andere Azure-services
+      href: dns-for-azure-services.md
+    - name: DNS-zones en records beschermen
+      href: dns-protect-zones-recordsets.md
+    - name: DNS-bewerkingen automatiseren met de .NET-SDK
+      href: dns-sdk.md
+    - name: Aangepaste domeinen voor Azure-resources
+      href: dns-custom-domain.md
+    - name: Problemen oplossen
+      items:
+        - name: Handleiding voor het oplossen van problemen
+          href: dns-troubleshoot.md
 - name: Naslaginformatie
   items:
-  - name: Codevoorbeelden
-    href: https://azure.microsoft.com/resources/samples/?service=dns
-  - name: Azure PowerShell
-    href: /powershell/module/az.dns
-  - name: Azure-CLI
-    href: /cli/azure/network/dns
-  - name: .NET
-    href: /dotnet/api/microsoft.azure.management.dns.models
-  - name: Java
-    href: /java/api/com.microsoft.azure.management.dns
-  - name: Node.js
-    href: https://azure.github.io/azure-sdk-for-node/azure-arm-dns/latest/
-  - name: Ruby
-    href: https://www.rubydoc.info/gems/azure_mgmt_dns/0.8.0
-  - name: Python
-    href: http://azure-sdk-for-python.readthedocs.io/en/latest/sample_azure-mgmt-dns.html
-  - name: REST
-    href: /rest/api/dns/
-  - name: Resource Manager-sjabloon
-    href: /azure/templates/microsoft.network/dns-allversions
+    - name: Codevoorbeelden
+      href: 'https://azure.microsoft.com/resources/samples/?service=dns'
+    - name: Azure PowerShell
+      href: /powershell/module/az.dns
+    - name: Azure-CLI
+      href: /cli/azure/network/dns
+    - name: .NET
+      href: /dotnet/api/microsoft.azure.management.dns.models
+    - name: Java
+      href: /java/api/com.microsoft.azure.management.dns
+    - name: Node.js
+      href: 'https://azure.github.io/azure-sdk-for-node/azure-arm-dns/latest/'
+    - name: Ruby
+      href: 'https://www.rubydoc.info/gems/azure_mgmt_dns/0.8.0'
+    - name: Python
+      href: 'http://azure-sdk-for-python.readthedocs.io/en/latest/sample_azure-mgmt-dns.html'
+    - name: REST
+      href: /rest/api/dns/
+    - name: Resource Manager-sjabloon
+      href: /azure/templates/microsoft.network/dns-allversions
 - name: Verwant
   items:
-  - name: Application Gateway
-    href: /azure/application-gateway/
-  - name: Virtual Network
-    href: /azure/virtual-network/
-  - name: Virtuele machine
-    href: /azure/virtual-machines/
-  - name: Load balancer
-    href: /azure/load-balancer/
-  - name: Traffic Manager
-    href: /azure/traffic-manager/
-  - name: Web-apps
-    href: /azure/app-service/
+    - name: Application Gateway
+      href: /azure/application-gateway/
+    - name: Virtual Network
+      href: /azure/virtual-network/
+    - name: Virtuele machine
+      href: /azure/virtual-machines/
+    - name: Load balancer
+      href: /azure/load-balancer/
+    - name: Traffic Manager
+      href: /azure/traffic-manager/
+    - name: Web-apps
+      href: /azure/app-service/
 - name: Resources
   items:
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/?category=networking
-  - name: Functieverzoeken
-    href: https://feedback.azure.com/forums/217313-networking/category/77466-domain-name-service-dns-traffic-manager
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=WAVirtualMachinesVirtualNetwork
-  - name: Netwerkblog
-    href: https://azure.microsoft.com/blog/topics/networking
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/dns/
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Service-updates
-    href: https://azure.microsoft.com/updates/?product=dns
-ms.openlocfilehash: 57c57ba6d03f45eb585e98e8d5706a94d72d8886
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59794395"
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/?category=networking'
+    - name: Functieverzoeken
+      href: 'https://feedback.azure.com/forums/217313-networking/category/77466-domain-name-service-dns-traffic-manager'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=WAVirtualMachinesVirtualNetwork'
+    - name: Netwerkblog
+      href: 'https://azure.microsoft.com/blog/topics/networking'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/dns/'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Service-updates
+      href: 'https://azure.microsoft.com/updates/?product=dns'
