--- a/articles/event-grid/index.yml
+++ b/articles/event-grid/index.yml
@@ -1,14 +1,8 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 53f9fbdf06958189a40f78b1b8d68b8fb02b7133
-ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/19/2019
-ms.locfileid: "58176749"
 documentType: LandingData
 title: Documentatie voor Azure Event Grid
 metadata:
-  title: Documentatie voor Azure Event Grid - zelfstudies, API-verwijzing
+  title: 'Documentatie voor Azure Event Grid - zelfstudies, API-verwijzing'
   description: Gebruik Azure Event Grid om vrijwel in realtime te reageren op relevante gebeurtenissen in Azure- en niet-Azure-services.
   services: event-grid
   author: czeumault
@@ -20,72 +14,72 @@ metadata:
   ms.date: 08/10/2017
   ms.author: carolz
 abstract:
-  description: Azure Event Grid is een volledig beheerde, intelligente service voor gebeurtenisroutering die uniform gebeurtenisverbruik mogelijk maakt op basis van een Publish-Subscribe-model. Gebruik Azure Event Grid om vrijwel in realtime te reageren op relevante gebeurtenissen in Azure- en niet-Azure-services. Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u Azure Event Grid gebruikt.
+  description: 'Azure Event Grid is een volledig beheerde, intelligente service voor gebeurtenisroutering die uniform gebeurtenisverbruik mogelijk maakt op basis van een Publish-Subscribe-model. Gebruik Azure Event Grid om vrijwel in realtime te reageren op relevante gebeurtenissen in Azure- en niet-Azure-services. Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u Azure Event Grid gebruikt.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Leer hoe u aangepaste gebeurtenissen maakt en u hierop abonneert.
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: /azure/event-grid/media/index/cli.svg
-      text: Azure-CLI
-      href: /azure/event-grid/custom-event-quickstart
-    - image:
-        src: /azure/event-grid/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/event-grid/custom-event-quickstart-powershell
-    - image:
-        src: /azure/event-grid/media/index/portal.svg
-      text: Azure-portal
-      href: /azure/event-grid/custom-event-quickstart-portal
-  - type: paragraph
-    text: Leer hoe u blob-opslaggebeurtenissen doorstuurt.
-  - type: list
-    style: icon48
+      - type: paragraph
+        text: Leer hoe u aangepaste gebeurtenissen maakt en u hierop abonneert.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/event-grid/media/index/cli.svg
+            text: Azure-CLI
+            href: /azure/event-grid/custom-event-quickstart
+          - image:
+              src: /azure/event-grid/media/index/logo_powershell.svg
+            text: Azure PowerShell
+            href: /azure/event-grid/custom-event-quickstart-powershell
+          - image:
+              src: /azure/event-grid/media/index/portal.svg
+            text: Azure-portal
+            href: /azure/event-grid/custom-event-quickstart-portal
+      - type: paragraph
+        text: Leer hoe u blob-opslaggebeurtenissen doorstuurt.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/event-grid/media/index/cli.svg
+            text: Azure-CLI
+            href: /azure/storage/blobs/storage-blob-event-quickstart?toc=%2fazure%2fevent-grid%2ftoc.json
+          - image:
+              src: /azure/event-grid/media/index/logo_powershell.svg
+            text: Azure PowerShell
+            href: /azure/storage/blobs/storage-blob-event-quickstart-powershell?toc=%2fazure%2fevent-grid%2ftoc.json
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - image:
-        src: /azure/event-grid/media/index/cli.svg
-      text: Azure-CLI
-      href: /azure/storage/blobs/storage-blob-event-quickstart?toc=%2fazure%2fevent-grid%2ftoc.json
-    - image:
-        src: /azure/event-grid/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/storage/blobs/storage-blob-event-quickstart-powershell?toc=%2fazure%2fevent-grid%2ftoc.json
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Leer hoe u toepassingen ontwikkelt die op gebeurtenissen reageren.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: Leer hoe u toepassingen ontwikkelt die op gebeurtenissen reageren.
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/event-grid/monitor-virtual-machine-changes-event-grid-logic-app">Wijzigingen in virtuele machines bewaken met logische apps</a>
+          - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event">Formaat van geüploade afbeeldingen wijzigen</a>
+          - html: <a href="/azure/event-grid/ensure-tags-exists-on-new-virtual-machines">Azure Automation integreren met Event Grid</a>
+  - title: Uw vaardigheden ontwikkelen met Microsoft Learn
     items:
-    - html: <a href="/azure/event-grid/monitor-virtual-machine-changes-event-grid-logic-app">Wijzigingen in virtuele machines bewaken met logische apps</a>
-    - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event">Formaat van geüploade afbeeldingen wijzigen</a>
-    - html: <a href="/azure/event-grid/ensure-tags-exists-on-new-virtual-machines">Azure Automation integreren met Event Grid</a>
-- title: Uw vaardigheden ontwikkelen met Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Een berichtenmodel in Azure kiezen om uw services losjes te verbinden
+            href: /learn/modules/choose-a-messaging-model-in-azure-to-connect-your-services/
+            image:
+              src: /learn/achievements/choose-a-messaging-model-in-azure-to-connect-your-services.svg
+              href: /learn/modules/choose-a-messaging-model-in-azure-to-connect-your-services/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-event-grid">Meer interactief leren...</a>
+  - title: Naslaginformatie
     items:
-    - title: Een berichtenmodel in Azure kiezen om uw services losjes te verbinden
-      href: /learn/modules/choose-a-messaging-model-in-azure-to-connect-your-services/
-      image:
-        src: /learn/achievements/choose-a-messaging-model-in-azure-to-connect-your-services.svg
-        href: /learn/modules/choose-a-messaging-model-in-azure-to-connect-your-services/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-event-grid">Meer interactief leren...</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Opdrachtregel
-      html: <p><a href="/cli/azure/eventgrid">Azure-CLI</a></p><p><a href="/powershell/module/az.eventgrid">PowerShell</a></p>
-    - title: REST-API’s
-      html: <p><a href="/rest/api/eventgrid">REST</a></p>
-    - title: Schema 's
-      html: <p><a href="/azure/event-grid/subscription-creation-schema ">Abonnementsschema</a></p><p><a href="/azure/event-grid/event-schema">Gebeurtenisschema</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Opdrachtregel
+            html: <p><a href="/cli/azure/eventgrid">Azure-CLI</a></p><p><a href="/powershell/module/az.eventgrid">PowerShell</a></p>
+          - title: REST-API’s
+            html: <p><a href="/rest/api/eventgrid">REST</a></p>
+          - title: Schema 's
+            html: <p><a href="/azure/event-grid/subscription-creation-schema ">Abonnementsschema</a></p><p><a href="/azure/event-grid/event-schema">Gebeurtenisschema</a></p>
