--- a/articles/guides/operations/TOC.yml
+++ b/articles/guides/operations/TOC.yml
@@ -21,7 +21,7 @@
         - name: Azure Stack
           items:
             - name: Overzicht van de implementatie van Azure Stack
-              href: /azure-stack/asdk/asdk-download
+              href: ../../azure-stack/azure-stack-deploy-overview.md
         - name: Azure Backup
           items:
             - name: Back-up van een virtuele machine in de Azure-portal
