--- a/articles/iot-central/index.yml
+++ b/articles/iot-central/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 67299955e00f2bb5fb409420dd951357f89e1996
-ms.sourcegitcommit: f20e43e436bfeafd333da75754cd32d405903b07
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "49384919"
 documentType: LandingData
 title: Documentatie over Azure IoT Central
 metadata:
-  title: Documentatie over Azure IoT Central - zelfstudies, API-verwijzing | Microsoft Docs
-  description: Azure IoT Central is een volledig beheerde SaaS-oplossing (Software as a Service), waarmee u uw IoT-assets eenvoudig op schaal kunt verbinden, controleren en beheren. Azure IoT Central vereenvoudigt de eerste installatie van uw IoT-oplossing en vermindert de beheerlast, de operationele kosten en overheadkosten van een typisch IoT-project. Leer aan de hand van onze snelstarts en zelfstudies hoe u een Azure IoT Central-toepassing maakt, aanpast, beheert en gebruikt.
+  title: 'Documentatie over Azure IoT Central - zelfstudies, API-verwijzing | Microsoft Docs'
+  description: 'Azure IoT Central is een volledig beheerde SaaS-oplossing (Software as a Service), waarmee u uw IoT-assets eenvoudig op schaal kunt verbinden, controleren en beheren. Azure IoT Central vereenvoudigt de eerste installatie van uw IoT-oplossing en vermindert de beheerlast, de operationele kosten en overheadkosten van een typisch IoT-project. Leer aan de hand van onze snelstarts en zelfstudies hoe u een Azure IoT Central-toepassing maakt, aanpast, beheert en gebruikt.'
   author: dominicbetts
   ms.topic: landing-page
   ms.date: 11/08/2017
@@ -18,25 +12,25 @@ metadata:
   services: iot-central
   manager: timlt
 abstract:
-  description: Azure IoT Central is een volledig beheerde SaaS-oplossing (Software as a Service), waarmee u uw IoT-assets eenvoudig op schaal kunt verbinden, controleren en beheren. Azure IoT Central vereenvoudigt de eerste installatie van uw IoT-oplossing en vermindert de beheerlast, de operationele kosten en overheadkosten van een typisch IoT-project. Leer aan de hand van onze snelstarts en zelfstudies hoe u een Azure IoT Central-toepassing maakt, aanpast, beheert en gebruikt.
+  description: 'Azure IoT Central is een volledig beheerde SaaS-oplossing (Software as a Service), waarmee u uw IoT-assets eenvoudig op schaal kunt verbinden, controleren en beheren. Azure IoT Central vereenvoudigt de eerste installatie van uw IoT-oplossing en vermindert de beheerlast, de operationele kosten en overheadkosten van een typisch IoT-project. Leer aan de hand van onze snelstarts en zelfstudies hoe u een Azure IoT Central-toepassing maakt, aanpast, beheert en gebruikt.'
 sections:
-- title: Functie-waarschuwing
-  items:
-  - type: paragraph
-    text: Azure IoT Central maakt nu gebruik van Azure IoT Hub Device Provisioning Service (DPS) voor alle apparaatverbindingen. U moet DPS SDK gebruiken om apparaten te registreren en te verbinden met uw Azure IoT Central-toepassing. <a href="https://docs.microsoft.com/azure/iot-central/concepts-connectivity">Meer informatie over apparaatconnectiviteit in Azure IoT Central.</a> Alle toepassingen die de functie voor continue gegevensexport en/of het Power BI-oplossingssjabloon gebruiken, moeten de doelcontainer voor opslag wijzigen en een nieuw oplossingssjabloon maken.
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Informatie over hoe u <a href="quick-deploy-iot-central">een nieuwe Azure IoT Central-toepassing maakt</a>.
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Informatie over hoe u uw Azure IoT Central-toepassing aanpast en gebruikt.
-  - type: list
-    style: ordered
+  - title: Functie-waarschuwing
     items:
-    - html: <a href="tutorial-define-device-type">Een nieuw apparaattype definiëren</a>
-    - html: <a href="tutorial-configure-rules">Regels configureren</a>
-    - html: <a href="tutorial-customize-operator">De weergave van de operator aanpassen</a>
-    - html: <a href="tutorial-monitor-devices">Uw apparaten controleren</a>
-    - html: <a href="tutorial-add-device">Een echt apparaat toevoegen</a>
+      - type: paragraph
+        text: 'Azure IoT Central maakt nu gebruik van Azure IoT Hub Device Provisioning Service (DPS) voor alle apparaatverbindingen. U moet DPS SDK gebruiken om apparaten te registreren en te verbinden met uw Azure IoT Central-toepassing. <a href="https://docs.microsoft.com/azure/iot-central/concepts-connectivity">Meer informatie over apparaatconnectiviteit in Azure IoT Central.</a> Alle toepassingen die de functie voor continue gegevensexport en/of het Power BI-oplossingssjabloon gebruiken, moeten de doelcontainer voor opslag wijzigen en een nieuw oplossingssjabloon maken.'
+  - title: QuickStarts van vijf minuten
+    items:
+      - type: paragraph
+        text: Informatie over hoe u <a href="quick-deploy-iot-central">een nieuwe Azure IoT Central-toepassing maakt</a>.
+  - title: Zelfstudies met stapsgewijze instructies
+    items:
+      - type: paragraph
+        text: Informatie over hoe u uw Azure IoT Central-toepassing aanpast en gebruikt.
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="tutorial-define-device-type">Een nieuw apparaattype definiëren</a>
+          - html: <a href="tutorial-configure-rules">Regels configureren</a>
+          - html: <a href="tutorial-customize-operator">De weergave van de operator aanpassen</a>
+          - html: <a href="tutorial-monitor-devices">Uw apparaten controleren</a>
+          - html: <a href="tutorial-add-device">Een echt apparaat toevoegen</a>
