--- a/articles/iot-dps/index.yml
+++ b/articles/iot-dps/index.yml
@@ -1,14 +1,8 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: c55cdff8c8738a04f5e62ae165a8b798f3743a18
-ms.sourcegitcommit: 744747d828e1ab937b0d6df358127fcf6965f8c8
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 08/16/2018
-ms.locfileid: "41927613"
 documentType: LandingData
 title: Documentatie over de Azure IoT Hub Device Provisioning Service
 metadata:
-  title: Documentatie over de Azure IoT Hub Device Provisioning Service - Zelfstudies, API-naslaginformatie
+  title: 'Documentatie over de Azure IoT Hub Device Provisioning Service - Zelfstudies, API-naslaginformatie'
   description: Overzicht van Azure IoT Hub Device Provisioning Service.
   author: nberdy
   manager: briz
@@ -18,41 +12,41 @@ metadata:
   ms.date: 01/23/2017
   ms.author: nberdy
 abstract:
-  description: De IoT Hub Device Provisioning Service is een helper-service voor IoT Hub die zero-touch, just-in-time inrichting naar de juiste IoT-hub biedt zonder menselijke tussenkomst, zodat gebruikers miljoenen apparaten op een veilige en schaalbare manier kunnen inrichten. Leer hoe u apparaten naar uw IoT-hub(s) kunt inrichten met onze snelstartgidsen, zelfstudies en voorbeelden.
+  description: 'De IoT Hub Device Provisioning Service is een helper-service voor IoT Hub die zero-touch, just-in-time inrichting naar de juiste IoT-hub biedt zonder menselijke tussenkomst, zodat gebruikers miljoenen apparaten op een veilige en schaalbare manier kunnen inrichten. Leer hoe u apparaten naar uw IoT-hub(s) kunt inrichten met onze snelstartgidsen, zelfstudies en voorbeelden.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Leer hoe u uw eerste Device Provisioning Service-exemplaar kunt instellen en richt een gesimuleerd apparaat in voor uw IoT-hub.
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: /azure/sql-database/media/index/portal.svg
-      text: Automatische inrichting instellen
-      href: /azure/iot-dps/quick-setup-auto-provision
-    - image:
-        src: /azure/sql-database/media/index/portal.svg
-      text: Een gesimuleerd apparaat maken
-      href: /azure/iot-dps/quick-create-simulated-device
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Leer hoe u de IoT Hub Device Provisioning Service kunt gebruiken voor het automatisch inrichten van apparaten met ingeschakelde beveiliging naar één of meerdere IoT-hubs.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: Leer hoe u uw eerste Device Provisioning Service-exemplaar kunt instellen en richt een gesimuleerd apparaat in voor uw IoT-hub.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/sql-database/media/index/portal.svg
+            text: Automatische inrichting instellen
+            href: /azure/iot-dps/quick-setup-auto-provision
+          - image:
+              src: /azure/sql-database/media/index/portal.svg
+            text: Een gesimuleerd apparaat maken
+            href: /azure/iot-dps/quick-create-simulated-device
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/iot-dps/tutorial-set-up-cloud">Cloudresources configureren</a>
-    - html: <a href="/azure/iot-dps/tutorial-set-up-device">Uw apparaat instellen om verbinding te maken met Azure</a>
-    - html: <a href="/azure/iot-dps/tutorial-provision-device-to-hub">Apparaten inrichten naar een enkele IoT-hub</a>
-    - html: <a href="/azure/iot-dps/tutorial-provision-multiple-hubs">Apparaten inrichten naar meerdere IoT-hubs met taakverdeling</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Leer hoe u de IoT Hub Device Provisioning Service kunt gebruiken voor het automatisch inrichten van apparaten met ingeschakelde beveiliging naar één of meerdere IoT-hubs.
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/iot-dps/tutorial-set-up-cloud">Cloudresources configureren</a>
+          - html: <a href="/azure/iot-dps/tutorial-set-up-device">Uw apparaat instellen om verbinding te maken met Azure</a>
+          - html: <a href="/azure/iot-dps/tutorial-provision-device-to-hub">Apparaten inrichten naar een enkele IoT-hub</a>
+          - html: <a href="/azure/iot-dps/tutorial-provision-multiple-hubs">Apparaten inrichten naar meerdere IoT-hubs met taakverdeling</a>
+  - title: Naslaginformatie
     items:
-    - title: REST-API
-      html: <p><a href="/rest/api/iot-dps">REST</a></p>
-    - title: SDK's voor Azure IoT
-      html: <p><a href="https://github.com/Azure/azure-iot-sdk-c">C</a></p><p><a href="https://github.com/Azure/azure-iot-sdk-python">Python</a></p><p><a href="https://github.com/Azure/azure-iot-sdk-node">Node</a></p><p><a href="https://github.com/Azure/azure-iot-sdk-java">Java</a></p><p><a href="https://github.com/Azure/azure-iot-sdk-csharp">C#</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: REST-API
+            html: <p><a href="/rest/api/iot-dps">REST</a></p>
+          - title: SDK's voor Azure IoT
+            html: '<p><a href="https://github.com/Azure/azure-iot-sdk-c">C</a></p><p><a href="https://github.com/Azure/azure-iot-sdk-python">Python</a></p><p><a href="https://github.com/Azure/azure-iot-sdk-node">Node</a></p><p><a href="https://github.com/Azure/azure-iot-sdk-java">Java</a></p><p><a href="https://github.com/Azure/azure-iot-sdk-csharp">C#</a></p>'
