--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -1,232 +1,225 @@
-items:
 - name: Documentatie over de Azure IoT Hub Device Provisioning Service
   href: index.yml
 - name: Overzicht
   items:
-  - name: IoT-apparaten inrichten
-    href: about-iot-dps.md
+    - name: IoT-apparaten inrichten
+      href: about-iot-dps.md
 - name: Snelstartgidsen
-  items:
-  - name: Automatische inrichting instellen - Azure CLI
-    href: quick-setup-auto-provision-cli.md
-  - name: Automatische inrichting instellen - Portal
-    href: quick-setup-auto-provision.md
-  - name: Automatische inrichting instellen - Sjabloon
-    href: quick-setup-auto-provision-rm.md
-  - name: Een gesimuleerd apparaat automatisch inrichten
-    items:
-    - name: TPM-attestation
-      items:
-      - name: C
-        href: quick-create-simulated-device.md
-      - name: Java
-        href: quick-create-simulated-device-tpm-java.md
-      - name: C#
-        href: quick-create-simulated-device-tpm-csharp.md
-      - name: Node.js
-        href: quick-create-simulated-device-tpm-node.md
-      - name: Python
-        href: quick-create-simulated-device-tpm-python.md
-    - name: X.509-attestation
-      items:
-      - name: C
-        href: quick-create-simulated-device-x509.md
-      - name: Java
-        href: quick-create-simulated-device-x509-java.md
-      - name: C#
-        href: quick-create-simulated-device-x509-csharp.md
-      - name: Node.js
-        href: quick-create-simulated-device-x509-node.md
-      - name: Python
-        href: quick-create-simulated-device-x509-python.md
-    - name: Attestation met behulp van een symmetrische sleutel
-      items:
-      - name: C
-        href: quick-create-simulated-device-symm-key.md
-  - name: Apparaten registreren met behulp van inrichtingsservice-API's
-    items:
-    - name: TPM-attestation
-      items:
-      - name: Java
-        href: quick-enroll-device-tpm-java.md
-      - name: C#
-        href: quick-enroll-device-tpm-csharp.md
-      - name: Node.js
-        href: quick-enroll-device-tpm-node.md
-      - name: Python
-        href: quick-enroll-device-tpm-python.md
-    - name: X.509-attestation
-      items:
-      - name: Java
-        href: quick-enroll-device-x509-java.md
-      - name: C#
-        href: quick-enroll-device-x509-csharp.md
-      - name: Node.js
-        href: quick-enroll-device-x509-node.md
-      - name: Python
-        href: quick-enroll-device-x509-python.md
   expanded: true
+  items:
+    - name: Automatische inrichting instellen - Azure CLI
+      href: quick-setup-auto-provision-cli.md
+    - name: Automatische inrichting instellen - Portal
+      href: quick-setup-auto-provision.md
+    - name: Automatische inrichting instellen - Sjabloon
+      href: quick-setup-auto-provision-rm.md
+    - name: Een gesimuleerd apparaat automatisch inrichten
+      items:
+        - name: TPM-attestation
+          items:
+            - name: C
+              href: quick-create-simulated-device.md
+            - name: Java
+              href: quick-create-simulated-device-tpm-java.md
+            - name: 'C#'
+              href: quick-create-simulated-device-tpm-csharp.md
+            - name: Node.js
+              href: quick-create-simulated-device-tpm-node.md
+            - name: Python
+              href: quick-create-simulated-device-tpm-python.md
+        - name: X.509-attestation
+          items:
+            - name: C
+              href: quick-create-simulated-device-x509.md
+            - name: Java
+              href: quick-create-simulated-device-x509-java.md
+            - name: 'C#'
+              href: quick-create-simulated-device-x509-csharp.md
+            - name: Node.js
+              href: quick-create-simulated-device-x509-node.md
+            - name: Python
+              href: quick-create-simulated-device-x509-python.md
+        - name: Attestation met behulp van een symmetrische sleutel
+          items:
+            - name: C
+              href: quick-create-simulated-device-symm-key.md
+    - name: Apparaten registreren met behulp van inrichtingsservice-API's
+      items:
+        - name: TPM-attestation
+          items:
+            - name: Java
+              href: quick-enroll-device-tpm-java.md
+            - name: 'C#'
+              href: quick-enroll-device-tpm-csharp.md
+            - name: Node.js
+              href: quick-enroll-device-tpm-node.md
+            - name: Python
+              href: quick-enroll-device-tpm-python.md
+        - name: X.509-attestation
+          items:
+            - name: Java
+              href: quick-enroll-device-x509-java.md
+            - name: 'C#'
+              href: quick-enroll-device-x509-csharp.md
+            - name: Node.js
+              href: quick-enroll-device-x509-node.md
+            - name: Python
+              href: quick-enroll-device-x509-python.md
 - name: Zelfstudies
   items:
-  - name: 1 - Cloudresources instellen
-    href: tutorial-set-up-cloud.md
-  - name: 2 - Apparaat instellen
-    href: tutorial-set-up-device.md
-  - name: 3 - Een apparaat inrichten naar een IoT-hub
-    items:
-    - name: C
-      href: tutorial-provision-device-to-hub.md
-    - name: C#
-      href: tutorial-net-provision-device-to-hub.md
-  - name: 4 - Apparaten inrichten naar meerdere hubs
-    href: tutorial-provision-multiple-hubs.md
-  - name: 5 - Groepsregistraties inrichten
-    href: tutorial-group-enrollments.md
+    - name: 1 - Cloudresources instellen
+      href: tutorial-set-up-cloud.md
+    - name: 2 - Apparaat instellen
+      href: tutorial-set-up-device.md
+    - name: 3 - Een apparaat inrichten naar een IoT-hub
+      items:
+        - name: C
+          href: tutorial-provision-device-to-hub.md
+        - name: 'C#'
+          href: tutorial-net-provision-device-to-hub.md
+    - name: 4 - Apparaten inrichten naar meerdere hubs
+      href: tutorial-provision-multiple-hubs.md
+    - name: 5 - Groepsregistraties inrichten
+      href: tutorial-group-enrollments.md
 - name: Concepten
   items:
-  - name: Automatische inrichting
-    href: concepts-auto-provisioning.md
-  - name: Opnieuw inrichten
-    href: concepts-device-reprovision.md
-  - name: Apparaten
-    href: concepts-device.md
-  - name: Beveiliging
-    href: concepts-security.md
-  - name: Service
-    href: concepts-service.md
-  - name: TPM-attestation
-    href: concepts-tpm-attestation.md
-  - name: Attestation met behulp van een symmetrische sleutel
-    href: concepts-symmetric-key-attestation.md
+    - name: Automatische inrichting
+      href: concepts-auto-provisioning.md
+    - name: Opnieuw inrichten
+      href: concepts-device-reprovision.md
+    - name: Apparaten
+      href: concepts-device.md
+    - name: Beveiliging
+      href: concepts-security.md
+    - name: Service
+      href: concepts-service.md
+    - name: TPM-attestation
+      href: concepts-tpm-attestation.md
+    - name: Attestation met behulp van een symmetrische sleutel
+      href: concepts-symmetric-key-attestation.md
 - name: Handleidingen
   items:
-  - name: MXChip IoT DevKit verbinden met IoT Hub
-    href: how-to-connect-mxchip-iot-devkit.md
-  - name: Configuratie van Device Provisioning Service beheren
-    items:
-    - name: Inschrijvingen beheren - Portal
-      href: how-to-manage-enrollments.md
-    - name: Inschrijvingen beheren - Service-SDK's
-      href: how-to-manage-enrollments-sdks.md
-    - name: Geverifieerde CA-certificaten configureren
-      href: how-to-verify-certificates.md
-    - name: Apparaatcertificaten vernieuwen
-      href: how-to-roll-certificates.md
-    - name: Apparaten opnieuw inrichten
-      href: how-to-reprovision.md
-    - name: Uitschrijving beheren
-      href: how-to-revoke-device-access-portal.md
-    - name: Ongedaan maken van inrichting beheren
-      href: how-to-unprovision-devices.md
-  - name: Device Provisioning Service beheren
-    items:
-    - name: Device Provisioning Service configureren voor gebruik van Azure CLI
-      href: how-to-manage-dps-with-cli.md
-    - name: Toegang tot de inrichtingsservice-API's beheren
-      href: how-to-control-access.md
-  - name: IoT Edge-apparaten inrichten
-    items:
-    - name: Linux
-      href: ../iot-edge/how-to-auto-provision-simulated-device-linux.md
-      maintainContext: true
-    - name: Windows
-      href: ../iot-edge/how-to-auto-provision-simulated-device-windows.md
-      maintainContext: true
-  - name: Attestation-mechanismen gebruiken met de SDK
-    href: use-hsm-with-sdk.md
-  - name: Inrichten voor multitenancy
-    href: how-to-provision-multitenant.md
-  - name: Aangepast toewijzingsbeleid gebruiken
-    href: how-to-use-custom-allocation-policies.md
-  - name: Symmetrische sleutels gebruiken met verouderde apparaten
-    href: how-to-legacy-device-symm-key.md
-  - name: SDK-hulpprogramma's gebruiken voor ontwikkeling
-    href: how-to-use-sdk-tools.md
+    - name: MXChip IoT DevKit verbinden met IoT Hub
+      href: how-to-connect-mxchip-iot-devkit.md
+    - name: Configuratie van Device Provisioning Service beheren
+      items:
+        - name: Inschrijvingen beheren - Portal
+          href: how-to-manage-enrollments.md
+        - name: Inschrijvingen beheren - Service-SDK's
+          href: how-to-manage-enrollments-sdks.md
+        - name: Geverifieerde CA-certificaten configureren
+          href: how-to-verify-certificates.md
+        - name: Apparaatcertificaten vernieuwen
+          href: how-to-roll-certificates.md
+        - name: Apparaten opnieuw inrichten
+          href: how-to-reprovision.md
+        - name: Uitschrijving beheren
+          href: how-to-revoke-device-access-portal.md
+        - name: Ongedaan maken van inrichting beheren
+          href: how-to-unprovision-devices.md
+    - name: Device Provisioning Service beheren
+      items:
+        - name: Device Provisioning Service configureren voor gebruik van Azure CLI
+          href: how-to-manage-dps-with-cli.md
+        - name: Toegang tot de inrichtingsservice-API's beheren
+          href: how-to-control-access.md
+    - name: IoT Edge-apparaten inrichten
+      items:
+        - name: Linux
+          href: ../iot-edge/how-to-auto-provision-simulated-device-linux.md
+          maintainContext: true
+        - name: Windows
+          href: ../iot-edge/how-to-auto-provision-simulated-device-windows.md
+          maintainContext: true
+    - name: Attestation-mechanismen gebruiken met de SDK
+      href: use-hsm-with-sdk.md
+    - name: Inrichten voor multitenancy
+      href: how-to-provision-multitenant.md
+    - name: Aangepast toewijzingsbeleid gebruiken
+      href: how-to-use-custom-allocation-policies.md
+    - name: Symmetrische sleutels gebruiken met verouderde apparaten
+      href: how-to-legacy-device-symm-key.md
+    - name: SDK-hulpprogramma's gebruiken voor ontwikkeling
+      href: how-to-use-sdk-tools.md
 - name: Naslaginformatie
   items:
-  - name: REST-API
-    href: /rest/api/iot-dps
-  - name: Resource Manager-sjabloon
-    href: /azure/templates/microsoft.devices/deviceprovisioning-allversions
-  - name: Azure IoT-SDK voor C
-    href: https://github.com/Azure/azure-iot-sdk-c
-  - name: Azure IoT-SDK voor Python
-    href: https://github.com/Azure/azure-iot-sdk-python
-  - name: Azure IoT-SDK voor Node.js
-    href: https://github.com/Azure/azure-iot-sdk-node
-  - name: Azure IoT-SDK voor Java
-    href: https://github.com/Azure/azure-iot-sdk-java
-  - name: Azure IoT-SDK voor .NET
-    href: https://github.com/Azure/azure-iot-sdk-csharp
+    - name: REST-API
+      href: /rest/api/iot-dps
+    - name: Resource Manager-sjabloon
+      href: /azure/templates/microsoft.devices/deviceprovisioning-allversions
+    - name: Azure IoT-SDK voor C
+      href: 'https://github.com/Azure/azure-iot-sdk-c'
+    - name: Azure IoT-SDK voor Python
+      href: 'https://github.com/Azure/azure-iot-sdk-python'
+    - name: Azure IoT-SDK voor Node.js
+      href: 'https://github.com/Azure/azure-iot-sdk-node'
+    - name: Azure IoT-SDK voor Java
+      href: 'https://github.com/Azure/azure-iot-sdk-java'
+    - name: Azure IoT-SDK voor .NET
+      href: 'https://github.com/Azure/azure-iot-sdk-csharp'
 - name: Verwant
   items:
-  - name: Oplossingen
-    items:
-    - name: IoT-oplossingsversnellers
-      href: /azure/iot-suite
-    - name: IoT Central
-      href: https://docs.microsoft.com/microsoft-iot-central/
-  - name: Platformservices
-    items:
-    - name: IoT Hub
-      href: /azure/iot-hub
-    - name: IoT Hub Device Provisioning Service
-      href: /azure/iot-dps
-    - name: Kaarten
-      href: /azure/azure-maps
-    - name: Service-SDK's
-      href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
-    - name: Time Series Insights
-      href: /azure/time-series-insights
-  - name: Edge
-    items:
-    - name: IoT Edge
-      href: /azure/iot-edge
-    - name: IoT Device-SDK's
-      href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
+    - name: Oplossingen
+      items:
+        - name: IoT-oplossingsversnellers
+          href: /azure/iot-suite
+        - name: IoT Central
+          href: 'https://docs.microsoft.com/microsoft-iot-central/'
+    - name: Platformservices
+      items:
+        - name: IoT Hub
+          href: /azure/iot-hub
+        - name: IoT Hub Device Provisioning Service
+          href: /azure/iot-dps
+        - name: Kaarten
+          href: /azure/azure-maps
+        - name: Service-SDK's
+          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks'
+        - name: Time Series Insights
+          href: /azure/time-series-insights
+    - name: Edge
+      items:
+        - name: IoT Edge
+          href: /azure/iot-edge
+        - name: IoT Device-SDK's
+          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
 - name: Resources
   items:
-  - name: Azure IoT-voorbeelden voor C# (.NET)
-    href: https://azure.microsoft.com/resources/samples/azure-iot-samples-csharp/
-  - name: Azure IoT-voorbeelden voor Node.js
-    href: https://azure.microsoft.com/resources/samples/azure-iot-samples-node/
-  - name: Azure IoT-voorbeelden voor Java
-    href: https://azure.microsoft.com/resources/samples/azure-iot-samples-java/
-  - name: Azure IoT-voorbeelden voor Python
-    href: https://azure.microsoft.com/resources/samples/azure-iot-samples-python/
-  - name: Azure IoT-voorbeelden voor iOS Platform
-    href: https://azure.microsoft.com/resources/samples/azure-iot-samples-ios/
-  - name: Azure IoT Hub
-    href: https://azure.microsoft.com/services/iot-hub/
-  - name: Azure Certified voor IoT-apparaatcatalogus
-    href: https://catalog.azureiotsolutions.com/
-  - name: Azure IoT-ontwikkelaarscentrum
-    href: https://azure.microsoft.com/develop/iot/
-  - name: Aanvragen van klantgegevens
-    href: iot-dps-customer-data-requests.md
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/?category=iot
-  - name: Hulpprogramma Device Explorer
-    href: https://github.com/Azure/azure-iot-sdk-csharp/tree/master/tools/DeviceExplorer
-  - name: Hulpprogramma iothub-diagnostics
-    href: https://github.com/Azure/iothub-diagnostics
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/azure/en-US/home?forum=azureiothub
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/iot-hub/
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Service-updates
-    href: https://azure.microsoft.com/updates/?product=iot-hub
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-iot-hub
-  - name: Technische casestudy's
-    href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
-  - name: Video's
-    href: https://azure.microsoft.com/documentation/videos/index/?services=iot-hub
-ms.openlocfilehash: 8b48f3ffa0f647faeb4284ea636b572a2a404e95
-ms.sourcegitcommit: bd15a37170e57b651c54d8b194e5a99b5bcfb58f
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/07/2019
-ms.locfileid: "57533116"
+    - name: 'Azure IoT-voorbeelden voor C# (.NET)'
+      href: 'https://azure.microsoft.com/resources/samples/azure-iot-samples-csharp/'
+    - name: Azure IoT-voorbeelden voor Node.js
+      href: 'https://azure.microsoft.com/resources/samples/azure-iot-samples-node/'
+    - name: Azure IoT-voorbeelden voor Java
+      href: 'https://azure.microsoft.com/resources/samples/azure-iot-samples-java/'
+    - name: Azure IoT-voorbeelden voor Python
+      href: 'https://azure.microsoft.com/resources/samples/azure-iot-samples-python/'
+    - name: Azure IoT-voorbeelden voor iOS Platform
+      href: 'https://azure.microsoft.com/resources/samples/azure-iot-samples-ios/'
+    - name: Azure IoT Hub
+      href: 'https://azure.microsoft.com/services/iot-hub/'
+    - name: Azure Certified voor IoT-apparaatcatalogus
+      href: 'https://catalog.azureiotsolutions.com/'
+    - name: Azure IoT-ontwikkelaarscentrum
+      href: 'https://azure.microsoft.com/develop/iot/'
+    - name: Aanvragen van klantgegevens
+      href: iot-dps-customer-data-requests.md
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/?category=iot'
+    - name: Hulpprogramma Device Explorer
+      href: 'https://github.com/Azure/azure-iot-sdk-csharp/tree/master/tools/DeviceExplorer'
+    - name: Hulpprogramma iothub-diagnostics
+      href: 'https://github.com/Azure/iothub-diagnostics'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/azure/en-US/home?forum=azureiothub'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/iot-hub/'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Service-updates
+      href: 'https://azure.microsoft.com/updates/?product=iot-hub'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-iot-hub'
+    - name: Technische casestudy's
+      href: 'https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured'
+    - name: Video's
+      href: 'https://azure.microsoft.com/documentation/videos/index/?services=iot-hub'
