--- a/articles/jenkins/index.yml
+++ b/articles/jenkins/index.yml
@@ -1,69 +1,63 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: e94a667cb67e4812984d4a338e763ebeaa1d3205
-ms.sourcegitcommit: fbf0124ae39fa526fc7e7768952efe32093e3591
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 01/08/2019
-ms.locfileid: "54073217"
 documentType: LandingData
 title: Jenkins op Azure
 metadata:
-  title: Documentatie over Jenkins op Azure - zelfstudies, voorbeelden, verwijzingen en resources
+  title: 'Documentatie over Jenkins op Azure - zelfstudies, voorbeelden, verwijzingen en resources'
   description: Jenkins implementeren en integreren met Azure
   ms.service: jenkins
-  keywords: jenkins, azure, devops, zelfstudies, voorbeelden, verwijzing
+  keywords: 'jenkins, azure, devops, zelfstudies, voorbeelden, verwijzing'
   author: tomarchermsft
   manager: jeconnoc
   ms.author: tarcher
   ms.topic: landing-page
   ms.date: 08/27/2018
 abstract:
-  description: Gebruik de Jenkins-server (open source) om apps te bouwen in de cloud en deze in Azure te implementeren. Leer aan de hand van onze QuickStarts, zelfstudies en voorbeeldpijplijnen hoe u Jenkins in Azure installeert, configureert en de schaal ervan aanpast, en hoe u continue integratie (CI) instelt voor uw apps.
+  description: 'Gebruik de Jenkins-server (open source) om apps te bouwen in de cloud en deze in Azure te implementeren. Leer aan de hand van onze QuickStarts, zelfstudies en voorbeeldpijplijnen hoe u Jenkins in Azure installeert, configureert en de schaal ervan aanpast, en hoe u continue integratie (CI) instelt voor uw apps.'
   aside:
     image:
       alt: Jenkins-logo
       height: 133
       width: 110
       src: media/Jenkins.png
-    title: 
+    title: null
 sections:
-- title: QuickStarts van vijf minuten
-  items:
+  - title: QuickStarts van vijf minuten
+    items:
+      - type: paragraph
+        text: Maak een Jenkins-systeem in Azure en bouw een app.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/portal.svg'
+            text: Azure-portal
+            href: 'https://docs.microsoft.com/azure/jenkins/install-jenkins-solution-template'
+  - title: Zelfstudies met stapsgewijze instructies
+    items:
+      - type: paragraph
+        text: 'Stel continue integratie in voor uw apps, voer agents uit in de cloud en gebruik Azure-services in uw taken.'
+      - type: list
+        style: ordered
+        items:
+          - html: 'Stel continue integratie met <a href="/azure/jenkins/java-deploy-webapp-tutorial">Azure App Service</a>, <a href="/azure/container-service/kubernetes/container-service-kubernetes-jenkins">Kubernetes</a> of een <a href="/azure/virtual-machines/linux/tutorial-jenkins-github-docker-cicd">virtuele Linux-machine</a> in.'
+          - html: <a href="/azure/jenkins/execute-cli-jenkins-pipeline">Richt resources in een pijplijntaak in</a>.
+          - html: <a href="/azure/jenkins/jenkins-azure-vm-agents">Pas de schaal aan met Azure-VM-agents</a>.
+  - title: Voorbeelden
+    items:
+      - type: paragraph
+        text: Voorbeeldscripts en -fasen voor uw pijplijnen.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: '<a href="https://github.com/Azure/azure-devops-utils/tree/master/jenkins">Jenkinsfile-fasen en -fragmenten</a>'
+  - title: Naslaginformatie
+    items:
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Invoegtoepassingen
+            html: '<p><a href="https://plugins.jenkins.io/azure-vm-agents">Azure VM Agents</a><p><a href="https://plugins.jenkins.io/azure-app-service">Azure App Service</a></p><p><a href="https://plugins.jenkins.io/windows-azure-storage">Azure Storage</a></p><p><a href="https://plugins.jenkins.io/azure-container-agents">Azure Container Agents</a><p><a href="https://plugins.jenkins.io/azure-function">Azure Function-invoegtoepassing</a><p><a href="https://plugins.jenkins.io/azure-acs">Azure Container Service-invoegtoepassing</a>'
   - type: paragraph
-    text: Maak een Jenkins-systeem in Azure en bouw een app.
-  - type: list
-    style: icon48
-    items:
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/portal.svg
-      text: Azure-portal
-      href: https://docs.microsoft.com/azure/jenkins/install-jenkins-solution-template
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Stel continue integratie in voor uw apps, voer agents uit in de cloud en gebruik Azure-services in uw taken.
-  - type: list
-    style: ordered
-    items:
-    - html: Stel continue integratie met <a href="/azure/jenkins/java-deploy-webapp-tutorial">Azure App Service</a>, <a href="/azure/container-service/kubernetes/container-service-kubernetes-jenkins">Kubernetes</a> of een <a href="/azure/virtual-machines/linux/tutorial-jenkins-github-docker-cicd">virtuele Linux-machine</a> in.
-    - html: <a href="/azure/jenkins/execute-cli-jenkins-pipeline">Richt resources in een pijplijntaak in</a>.
-    - html: <a href="/azure/jenkins/jenkins-azure-vm-agents">Pas de schaal aan met Azure-VM-agents</a>.
-- title: Voorbeelden
-  items:
-  - type: paragraph
-    text: Voorbeeldscripts en -fasen voor uw pijplijnen.
-  - type: list
-    style: unordered
-    className: spaced noBullet
-    items:
-    - html: <a href="https://github.com/Azure/azure-devops-utils/tree/master/jenkins">Jenkinsfile-fasen en -fragmenten</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Invoegtoepassingen
-      html: <p><a href="https://plugins.jenkins.io/azure-vm-agents">Azure VM Agents</a><p><a href="https://plugins.jenkins.io/azure-app-service">Azure App Service</a></p><p><a href="https://plugins.jenkins.io/windows-azure-storage">Azure Storage</a></p><p><a href="https://plugins.jenkins.io/azure-container-agents">Azure Container Agents</a><p><a href="https://plugins.jenkins.io/azure-function">Azure Function-invoegtoepassing</a><p><a href="https://plugins.jenkins.io/azure-acs">Azure Container Service-invoegtoepassing</a>
-- type: paragraph
-  text: <h4>Jenkins® is een geregistreerd handelsmerk van Software in the Public Interest, Inc. Het [Jenkins®-logo](https://wiki.jenkins.io/display/JENKINS/Logo) wordt gebruikt onder licentie van [CC BY SA 3.0](https://creativecommons.org/licenses/by-sa/3.0/) van het [Jenkins-project](https://jenkins.io).</h4>
+    text: '<h4>Jenkins® is een geregistreerd handelsmerk van Software in the Public Interest, Inc. Het [Jenkins®-logo](https://wiki.jenkins.io/display/JENKINS/Logo) wordt gebruikt onder licentie van [CC BY SA 3.0](https://creativecommons.org/licenses/by-sa/3.0/) van het [Jenkins-project](https://jenkins.io).</h4>'
