--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -1,105 +1,99 @@
-items:
 - name: Documentatie voor RBAC voor Azure-resources
   href: index.yml
+  items: null
 - name: Overzicht
   items:
-  - name: Wat is RBAC?
-    href: overview.md
-  - name: Inzicht in de verschillende rollen
-    href: rbac-and-directory-admin-roles.md
+    - name: Wat is RBAC?
+      href: overview.md
+    - name: Inzicht in de verschillende rollen
+      href: rbac-and-directory-admin-roles.md
 - name: Snelstartgidsen
   items:
-  - name: Toegang voor een gebruiker bekijken
-    href: check-access.md
+    - name: Toegang voor een gebruiker bekijken
+      href: check-access.md
 - name: Zelfstudies
   items:
-  - name: Een gebruiker toegang verlenen - Portal
-    href: quickstart-assign-role-user-portal.md
-  - name: Een gebruiker toegang verlenen - PowerShell
-    href: tutorial-role-assignments-user-powershell.md
-  - name: Een groep toegang verlenen - PowerShell
-    href: tutorial-role-assignments-group-powershell.md
-  - name: Een aangepaste rol maken - PowerShell
-    href: tutorial-custom-role-powershell.md
-  - name: Een aangepaste rol maken - CLI
-    href: tutorial-custom-role-cli.md
+    - name: Een gebruiker toegang verlenen - Portal
+      href: quickstart-assign-role-user-portal.md
+    - name: Een gebruiker toegang verlenen - PowerShell
+      href: tutorial-role-assignments-user-powershell.md
+    - name: Een groep toegang verlenen - PowerShell
+      href: tutorial-role-assignments-group-powershell.md
+    - name: Een aangepaste rol maken - PowerShell
+      href: tutorial-custom-role-powershell.md
+    - name: Een aangepaste rol maken - CLI
+      href: tutorial-custom-role-cli.md
 - name: Concepten
   items:
-  - name: Roldefinities begrijpen
-    href: role-definitions.md
-  - name: PIM voor Azure-resources
-    href: pim-azure-resource.md
-  - name: Voorwaardelijke toegang voor Azure-beheer
-    href: conditional-access-azure-management.md
+    - name: Roldefinities begrijpen
+      href: role-definitions.md
+    - name: PIM voor Azure-resources
+      href: pim-azure-resource.md
+    - name: Voorwaardelijke toegang voor Azure-beheer
+      href: conditional-access-azure-management.md
 - name: Handleidingen
   items:
-  - name: Toegang beheren
-    items:
-    - name: Portal
-      href: role-assignments-portal.md
-    - name: PowerShell
-      href: role-assignments-powershell.md
-    - name: Azure-CLI
-      href: role-assignments-cli.md
-    - name: REST-API
-      href: role-assignments-rest.md
-    - name: Template
-      href: role-assignments-template.md
-  - name: Toegang weigeren
-    items:
-    - name: Weigeringstoewijzingen
-      href: deny-assignments.md
-    - name: Portal
-      href: deny-assignments-portal.md
-    - name: REST-API
-      href: deny-assignments-rest.md
-  - name: Aangepaste rollen
-    items:
-    - name: Overzicht
-      href: custom-roles.md
-    - name: PowerShell
-      href: custom-roles-powershell.md
-    - name: Azure-CLI
-      href: custom-roles-cli.md
-    - name: REST-API
-      href: custom-roles-rest.md
-  - name: Activiteitenlogboeken bekijken
-    href: change-history-report.md
-  - name: Toegangsrechten verhogen om alle abonnementen te beheren
-    href: elevate-access-global-admin.md
-  - name: Toegang voor externe gebruikers beheren
-    href: role-assignments-external-users.md
-  - name: Klassieke beheerders
-    href: classic-administrators.md
-  - name: Problemen oplossen
-    href: troubleshooting.md
+    - name: Toegang beheren
+      items:
+        - name: Portal
+          href: role-assignments-portal.md
+        - name: PowerShell
+          href: role-assignments-powershell.md
+        - name: Azure-CLI
+          href: role-assignments-cli.md
+        - name: REST-API
+          href: role-assignments-rest.md
+        - name: Template
+          href: role-assignments-template.md
+    - name: Toegang weigeren
+      items:
+        - name: Weigeringstoewijzingen
+          href: deny-assignments.md
+        - name: Portal
+          href: deny-assignments-portal.md
+        - name: REST-API
+          href: deny-assignments-rest.md
+    - name: Aangepaste rollen
+      items:
+        - name: Overzicht
+          href: custom-roles.md
+        - name: PowerShell
+          href: custom-roles-powershell.md
+        - name: Azure-CLI
+          href: custom-roles-cli.md
+        - name: REST-API
+          href: custom-roles-rest.md
+    - name: Activiteitenlogboeken bekijken
+      href: change-history-report.md
+    - name: Toegangsrechten verhogen om alle abonnementen te beheren
+      href: elevate-access-global-admin.md
+    - name: Toegang voor externe gebruikers beheren
+      href: role-assignments-external-users.md
+    - name: Klassieke beheerders
+      href: classic-administrators.md
+    - name: Problemen oplossen
+      href: troubleshooting.md
 - name: Naslaginformatie
   items:
-  - name: Ingebouwde rollen
-    href: built-in-roles.md
-  - name: Resourceproviderbewerkingen
-    href: resource-provider-operations.md
-  - name: RBAC-beperkingen
-    href: ../azure-subscription-service-limits.md#role-based-access-control-limits
-  - name: Azure PowerShell
-    href: /powershell/module/az.resources
-  - name: Azure-CLI
-    href: /cli/azure/role?view=azure-cli-latest
-  - name: REST-API
-    href: /rest/api/authorization/
-  - name: Resource Manager-sjablonen
-    items:
-    - name: Roltoewijzingen
-      href: /azure/templates/microsoft.authorization/roleassignments
-    - name: Roldefinities
-      href: /azure/templates/microsoft.authorization/roledefinitions
+    - name: Ingebouwde rollen
+      href: built-in-roles.md
+    - name: Resourceproviderbewerkingen
+      href: resource-provider-operations.md
+    - name: RBAC-beperkingen
+      href: '../azure-subscription-service-limits.md#role-based-access-control-limits'
+    - name: Azure PowerShell
+      href: /powershell/module/az.resources
+    - name: Azure-CLI
+      href: /cli/azure/role?view=azure-cli-latest
+    - name: REST-API
+      href: /rest/api/authorization/
+    - name: Resource Manager-sjablonen
+      items:
+        - name: Roltoewijzingen
+          href: /azure/templates/microsoft.authorization/roleassignments
+        - name: Roldefinities
+          href: /azure/templates/microsoft.authorization/roledefinitions
 - name: Resources
   items:
-  - name: Uw vaardigheden ontwikkelen met Microsoft Learn
-    href: /learn/browse/?products=azure-active-directory
-ms.openlocfilehash: 30bd7deb2a0845288999a09912e48700d3182b9b
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59785886"
+    - name: Uw vaardigheden ontwikkelen met Microsoft Learn
+      href: /learn/browse/?products=azure-active-directory
