--- a/articles/role-based-access-control/index.yml
+++ b/articles/role-based-access-control/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 2f0465b954e48822470374abeadb13e90a03fa3a
-ms.sourcegitcommit: 4bf542eeb2dcdf60dcdccb331e0a336a39ce7ab3
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 02/19/2019
-ms.locfileid: "56408728"
 documentType: LandingData
 title: Documentatie voor RBAC voor Azure-resources
 metadata:
-  document_id: 
+  document_id: null
   title: Documentatie voor op rollen gebaseerd toegangsbeheer (RBAC) voor Azure-resources | Microsoft Docs
-  description: Meer informatie over het gebruik van op rollen gebaseerd toegangsbeheer (RBAC) om te beheren wie toegang heeft tot Azure-resources, wat ze kunnen doen met die bronnen en tot welke gebieden ze toegang hebben.
+  description: 'Meer informatie over het gebruik van op rollen gebaseerd toegangsbeheer (RBAC) om te beheren wie toegang heeft tot Azure-resources, wat ze kunnen doen met die bronnen en tot welke gebieden ze toegang hebben.'
   services: active-directory
   author: rolyon
   manager: mtillman
@@ -24,39 +18,39 @@ abstract:
   description: Op rollen gebaseerde toegangsbeheer (RBAC) is een systeem waarmee u geavanceerd toegangsbeheer van Azure-resources kunt toepassen. Met op rollen gebaseerd toegangsbeheer kunt u taken scheiden binnen uw team en alleen de mate van toegang verlenen aan gebruikers die nodig is om de taken uit te voeren.
   aside:
     image:
-      alt: 
+      alt: null
       height: 112
       src: media/index/video-thumb-get-started.png
       width: 200
-    title: De toegang tot Azure beperken (1:16)
-    href: https://www.youtube.com/embed/FKBoWWKRnvI
+    title: 'De toegang tot Azure beperken (1:16)'
+    href: 'https://www.youtube.com/embed/FKBoWWKRnvI'
     width: 200
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: list
-    style: unordered
+  - title: QuickStarts van vijf minuten
     items:
-    - html: <a href="/azure/role-based-access-control/check-access">Toegang voor een gebruiker bekijken</a>
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: list
-    style: unordered
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/role-based-access-control/check-access">Toegang voor een gebruiker bekijken</a>
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/role-based-access-control/quickstart-assign-role-user-portal">Een gebruiker toegang verlenen - Portal</a>
-    - html: <a href="/azure/role-based-access-control/tutorial-role-assignments-group-powershell">Een groep toegang verlenen - PowerShell</a>
-    - html: <a href="/azure/role-based-access-control/tutorial-custom-role-powershell">Een aangepaste rol maken - PowerShell</a>
-    - html: <a href="/azure/role-based-access-control/tutorial-custom-role-cli">Een aangepaste rol maken - CLI</a>
-- title: Uw vaardigheden ontwikkelen met Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/role-based-access-control/quickstart-assign-role-user-portal">Een gebruiker toegang verlenen - Portal</a>
+          - html: <a href="/azure/role-based-access-control/tutorial-role-assignments-group-powershell">Een groep toegang verlenen - PowerShell</a>
+          - html: <a href="/azure/role-based-access-control/tutorial-custom-role-powershell">Een aangepaste rol maken - PowerShell</a>
+          - html: <a href="/azure/role-based-access-control/tutorial-custom-role-cli">Een aangepaste rol maken - CLI</a>
+  - title: Uw vaardigheden ontwikkelen met Microsoft Learn
     items:
-    - title: Uw Azure-resources beveiligen met op rollen gebaseerd toegangsbeheer (RBAC)
-      href: /learn/modules/secure-azure-resources-with-rbac/
-      image:
-        src: /learn/achievements/secure-azure-resources-with-rbac.svg
-        href: /learn/modules/secure-azure-resources-with-rbac/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-active-directory">Meer interactief leren...</a>
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Uw Azure-resources beveiligen met op rollen gebaseerd toegangsbeheer (RBAC)
+            href: /learn/modules/secure-azure-resources-with-rbac/
+            image:
+              src: /learn/achievements/secure-azure-resources-with-rbac.svg
+              href: /learn/modules/secure-azure-resources-with-rbac/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-active-directory">Meer interactief leren...</a>
