--- a/articles/storage/TOC.yml
+++ b/articles/storage/TOC.yml
@@ -1,13 +1,12 @@
-items:
 - name: Documentatie bij Azure Storage
   href: index.yml
 - name: Overzicht
-  items:
-  - name: Inleiding
-    href: ./common/storage-introduction.md
-  - name: Kies blobs, bestanden of schijven
-    href: ./common/storage-decide-blobs-files-disks.md
   expanded: true
+  items:
+    - name: Inleiding
+      href: ./common/storage-introduction.md
+    - name: 'Kies blobs, bestanden of schijven'
+      href: ./common/storage-decide-blobs-files-disks.md
 - name: Blobs
   href: ./blobs/storage-blobs-overview.md
 - name: Data Lake Storage Gen2
@@ -20,13 +19,7 @@ items:
   href: ./tables/table-storage-overview.md
 - name: Disks
   items:
-  - name: Windows
-    href: ../virtual-machines/windows/managed-disks-overview.md
-  - name: Linux
-    href: ../virtual-machines/linux/managed-disks-overview.md
-ms.openlocfilehash: 44904cb09b3865da6040fa581cf43dccf722db20
-ms.sourcegitcommit: d2329d88f5ecabbe3e6da8a820faba9b26cb8a02
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 02/16/2019
-ms.locfileid: "56329828"
+    - name: Windows
+      href: ../virtual-machines/windows/managed-disks-overview.md
+    - name: Linux
+      href: ../virtual-machines/linux/managed-disks-overview.md
