--- a/articles/stream-analytics/index.yml
+++ b/articles/stream-analytics/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f43db52a3fcfef17b56d5053b56e315e81fda27e
-ms.sourcegitcommit: 90c6b63552f6b7f8efac7f5c375e77526841a678
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 02/23/2019
-ms.locfileid: "56732582"
 documentType: LandingData
 title: Documentatie voor Stream Analytics
 metadata:
-  title: Documentatie voor Azure Stream Analytics - zelfstudies, API-verwijzing
-  meta.description: Learn how to run IoT analytics in the cloud with fully-managed event processing. Analyze data in real time from applications, sensors, devices, and more.
+  title: 'Documentatie voor Azure Stream Analytics - zelfstudies, API-verwijzing'
+  meta.description: 'Learn how to run IoT analytics in the cloud with fully-managed event processing. Analyze data in real time from applications, sensors, devices, and more.'
   services: stream-analytics
   author: mamccrea
   ms.author: mamccrea
@@ -18,59 +12,59 @@ metadata:
   ms.date: 12/06/2018
   ms.custom: seodec18
 abstract:
-  description: Leer hoe u IoT-analyses (Internet of Things) kunt uitvoeren in de cloud met Stream Analytics, een volledig beheerde engine voor gebeurtenisverwerking. Zelfstudies en andere documentatie laten zien hoe u in realtime gegevens van toepassingen, sensoren, apparaten, sociale media en meer kunt analyseren.
+  description: 'Leer hoe u IoT-analyses (Internet of Things) kunt uitvoeren in de cloud met Stream Analytics, een volledig beheerde engine voor gebeurtenisverwerking. Zelfstudies en andere documentatie laten zien hoe u in realtime gegevens van toepassingen, sensoren, apparaten, sociale media en meer kunt analyseren.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: ./media/index/streaming-analytics-thumbnail.png
       width: 250
-    title: Realtime-analyses en machine learning met Azure Stream Analytics. (1:15:05)
-    href: https://myignite.techcommunity.microsoft.com/sessions/65358?source=sessions#ignite-html-anchor
+    title: 'Realtime-analyses en machine learning met Azure Stream Analytics. (1:15:05)'
+    href: 'https://myignite.techcommunity.microsoft.com/sessions/65358?source=sessions#ignite-html-anchor'
     width: 250
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: 'Informatie over hoe u uw eerste Azure Stream Analytics-taak implementeert:'
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: media/index/stream-analytics.svg
-      text: Azure Portal
-      href: https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-portal
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_powershell.svg
-      text: PowerShell
-      href: https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-powershell
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_visual-studio.svg
-      text: Visual Studio
-      href: https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-vs
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: 'Informatie over hoe u uw Azure Stream Analytics-taak implementeert, beheert en bewaakt:'
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Informatie over hoe u uw eerste Azure Stream Analytics-taak implementeert:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: media/index/stream-analytics.svg
+            text: Azure Portal
+            href: 'https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-portal'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_powershell.svg'
+            text: PowerShell
+            href: 'https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-powershell'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_visual-studio.svg'
+            text: Visual Studio
+            href: 'https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-vs'
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="stream-analytics-manage-job">Een Stream Analytics-taak maken om gegevens van telefoongesprekken te analyseren en de resultaten te visualiseren in een Power BI-dashboard</a>
-    - html: <a href="stream-analytics-with-azure-functions">Azure Functions uitvoeren vanuit Azure Stream Analytics-taken</a>
-    - html: <a href="stream-analytics-javascript-user-defined-functions">Door gebruiker gedefinieerde JavaScript-functies uitvoeren in Stream Analytics-taken</a>
-    - html: <a href="stream-analytics-tools-visual-studio-cicd-vsts">Een Azure Stream Analytics-taak met CI/CD implementeren met behulp van Azure Pipelines</a>
-    - html: <a href="stream-analytics-edge-csharp-udf">Een door de gebruiker gedefinieerde C#-functie schrijven voor een Azure Stream Analytics Edge-taak (preview)</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Informatie over hoe u uw Azure Stream Analytics-taak implementeert, beheert en bewaakt:'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="stream-analytics-manage-job">Een Stream Analytics-taak maken om gegevens van telefoongesprekken te analyseren en de resultaten te visualiseren in een Power BI-dashboard</a>
+          - html: <a href="stream-analytics-with-azure-functions">Azure Functions uitvoeren vanuit Azure Stream Analytics-taken</a>
+          - html: <a href="stream-analytics-javascript-user-defined-functions">Door gebruiker gedefinieerde JavaScript-functies uitvoeren in Stream Analytics-taken</a>
+          - html: <a href="stream-analytics-tools-visual-studio-cicd-vsts">Een Azure Stream Analytics-taak met CI/CD implementeren met behulp van Azure Pipelines</a>
+          - html: '<a href="stream-analytics-edge-csharp-udf">Een door de gebruiker gedefinieerde C#-functie schrijven voor een Azure Stream Analytics Edge-taak (preview)</a>'
+  - title: Naslaginformatie
     items:
-    - title: Previews
-      html: <p><a href="stream-analytics-previews#public-previews">Openbare previews</a></p><p><a href="stream-analytics-previews#private-previews">Beperkte previews</a></p>
-    - title: Opdrachtregel
-      html: <p><a href="https://docs.microsoft.com/powershell/module/az.streamanalytics/#stream_analytics">Azure PowerShell</a></p>
-    - title: Talen
-      html: <p><a href="/dotnet/api/microsoft.azure.management.streamanalytics?view=azuremgmtstreamanalytics-1.8.3">.NET</a></p><p><a href="https://msdn.microsoft.com/azure/stream-analytics/reference/stream-analytics-query-language-reference">Querytaal voor Stream Analytics</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/streamanalytics">Naslaginformatie over REST-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Previews
+            html: '<p><a href="stream-analytics-previews#public-previews">Openbare previews</a></p><p><a href="stream-analytics-previews#private-previews">Beperkte previews</a></p>'
+          - title: Opdrachtregel
+            html: '<p><a href="https://docs.microsoft.com/powershell/module/az.streamanalytics/#stream_analytics">Azure PowerShell</a></p>'
+          - title: Talen
+            html: '<p><a href="/dotnet/api/microsoft.azure.management.streamanalytics?view=azuremgmtstreamanalytics-1.8.3">.NET</a></p><p><a href="https://msdn.microsoft.com/azure/stream-analytics/reference/stream-analytics-query-language-reference">Querytaal voor Stream Analytics</a></p>'
+          - title: REST
+            html: <p><a href="/rest/api/streamanalytics">Naslaginformatie over REST-API</a></p>
