--- a/articles/terraform/index.yml
+++ b/articles/terraform/index.yml
@@ -1,69 +1,63 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 8ca48ec812c2c9ea4b6aac814c77f0554bd9ae0a
-ms.sourcegitcommit: 5fbca3354f47d936e46582e76ff49b77a989f299
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/12/2019
-ms.locfileid: "57765695"
 documentType: LandingData
 title: Documentatie over Terraform op Azure
 metadata:
-  title: Documentatie over Terraform op Azure - zelfstudies, voorbeelden, verwijzingen en resources
+  title: 'Documentatie over Terraform op Azure - zelfstudies, voorbeelden, verwijzingen en resources'
   description: Leer hoe u Terraform kunt gebruiken om op betrouwbare wijze virtuele machines en andere infrastructuur op Azure in te richten.
   services: terraform
   ms.service: azure
-  keywords: terraform, azure, devops, zelfstudies, voorbeelden, verwijzing
+  keywords: 'terraform, azure, devops, zelfstudies, voorbeelden, verwijzing'
   author: tomarchermsft
   manager: jeconnoc
   ms.author: tarcher
   ms.topic: landing-page
   ms.date: 08/31/2018
 abstract:
-  description: Gebruik Terraform om op betrouwbare wijze infrastructuur in Azure te maken en versies te beheren. Leer aan de hand van onze snelstartgidsen en zelfstudies over het maken van resources, het gebruiken van Azure Terraform-modules en het onderhouden van uw infrastructuur met code.
+  description: 'Gebruik Terraform om op betrouwbare wijze infrastructuur in Azure te maken en versies te beheren. Leer aan de hand van onze snelstartgidsen en zelfstudies over het maken van resources, het gebruiken van Azure Terraform-modules en het onderhouden van uw infrastructuur met code.'
 sections:
-- title: Snelstartgidsen
-  items:
-  - type: paragraph
-    text: Terraform configureren en gebruiken om een Linux-VM te maken in Azure.
-  - type: list
-    style: icon48
+  - title: Snelstartgidsen
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/media/index/azure_dev-9.svg
-      text: Terraform installeren en configureren
-      href: https://docs.microsoft.com/azure/virtual-machines/linux/terraform-install-configure
-    - image:
-        src: https://docs.microsoft.com/azure/media/index/VirtualMachine.svg
-      text: Een Linux-VM maken
-      href: https://docs.microsoft.com/azure/virtual-machines/linux/terraform-create-complete-vm
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Informatie over het maken van berekenings- en netwerkinfrastructuur in Azure op basis van code met Terraform.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Terraform configureren en gebruiken om een Linux-VM te maken in Azure.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/media/index/azure_dev-9.svg'
+            text: Terraform installeren en configureren
+            href: 'https://docs.microsoft.com/azure/virtual-machines/linux/terraform-install-configure'
+          - image:
+              src: 'https://docs.microsoft.com/azure/media/index/VirtualMachine.svg'
+            text: Een Linux-VM maken
+            href: 'https://docs.microsoft.com/azure/virtual-machines/linux/terraform-create-complete-vm'
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/terraform/terraform-create-k8s-cluster-with-tf-and-aks">Een Kubernetes-cluster maken met AKS</a>.
-    - html: <a href="/azure/terraform/terraform-create-k8s-cluster-with-aks-applicationgateway-ingress">Een Kubernetes-cluster maken met AKS met Application Gateway als inkomende controller</a>.
-    - html: <a href="/azure/terraform/terraform-vm-msi">Maak een virtuele Terraform-machine met ingeschakelde MSI-verificatie met behulp van een installatiekopie van de Azure Marketplace</a>.
-    - html: <a href="/azure/terraform/terraform-create-vm-cluster-module">Een VM-cluster met taakverdeling maken met behulp van Azure Terraform-modules</a>.
-    - html: <a href="/azure/terraform/terraform-create-vm-cluster-with-infrastructure">Een VM-cluster met taakverdeling maken in de Azure Cloud Shell</a>.
-    - html: <a href="/azure/terraform/terraform-create-vm-scaleset-network-disks-hcl">Een VM-schaalset configureren met netwerkmogelijkheden en opslag</a>
-    - html: <a href="/azure/terraform/terraform-create-vm-scaleset-network-disks-using-packer-hcl">Een VM-schaalset inrichten op basis van een aangepaste Packer-installatiekopie</a>
-- title: Voorbeelden
-  items:
-  - type: paragraph
-    text: Voorbeelden van configuratiesjablonen voor veelvoorkomende implementatietaken.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: Informatie over het maken van berekenings- en netwerkinfrastructuur in Azure op basis van code met Terraform.
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/terraform/terraform-create-k8s-cluster-with-tf-and-aks">Een Kubernetes-cluster maken met AKS</a>.
+          - html: <a href="/azure/terraform/terraform-create-k8s-cluster-with-aks-applicationgateway-ingress">Een Kubernetes-cluster maken met AKS met Application Gateway als inkomende controller</a>.
+          - html: <a href="/azure/terraform/terraform-vm-msi">Maak een virtuele Terraform-machine met ingeschakelde MSI-verificatie met behulp van een installatiekopie van de Azure Marketplace</a>.
+          - html: <a href="/azure/terraform/terraform-create-vm-cluster-module">Een VM-cluster met taakverdeling maken met behulp van Azure Terraform-modules</a>.
+          - html: <a href="/azure/terraform/terraform-create-vm-cluster-with-infrastructure">Een VM-cluster met taakverdeling maken in de Azure Cloud Shell</a>.
+          - html: <a href="/azure/terraform/terraform-create-vm-scaleset-network-disks-hcl">Een VM-schaalset configureren met netwerkmogelijkheden en opslag</a>
+          - html: <a href="/azure/terraform/terraform-create-vm-scaleset-network-disks-using-packer-hcl">Een VM-schaalset inrichten op basis van een aangepaste Packer-installatiekopie</a>
+  - title: Voorbeelden
     items:
-    - html: <a href="https://github.com/terraform-providers/terraform-provider-azurerm/tree/master/examples">GitHub</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Voorbeelden van configuratiesjablonen voor veelvoorkomende implementatietaken.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: '<a href="https://github.com/terraform-providers/terraform-provider-azurerm/tree/master/examples">GitHub</a>'
+  - title: Naslaginformatie
     items:
-    - title: Azure Terraform-modules
-      html: <p><a href="https://registry.terraform.io/modules/Azure/database/azurerm">Azure RM for Database</a></p><p><a href="https://registry.terraform.io/modules/Azure/loadbalancer">Azure RM for Load Balancer</a></p><p><a href="https://registry.terraform.io/modules/Azure/computegroup">Azure RM Compute Group</a></p><p><a href="https://registry.terraform.io/modules/Azure/network">Azure RM Network</a></p><p><a href="https://registry.terraform.io/modules/Azure/compute">Azure RM Compute</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Azure Terraform-modules
+            html: '<p><a href="https://registry.terraform.io/modules/Azure/database/azurerm">Azure RM for Database</a></p><p><a href="https://registry.terraform.io/modules/Azure/loadbalancer">Azure RM for Load Balancer</a></p><p><a href="https://registry.terraform.io/modules/Azure/computegroup">Azure RM Compute Group</a></p><p><a href="https://registry.terraform.io/modules/Azure/network">Azure RM Network</a></p><p><a href="https://registry.terraform.io/modules/Azure/compute">Azure RM Compute</a></p>'
