--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -1,188 +1,181 @@
-items:
 - name: Documentatie voor Azure Time Series Insights
   href: index.yml
 - name: Overzicht
   items:
-  - name: Meer informatie over Time Series Insights
-    href: time-series-insights-update-overview.md
+    - name: Meer informatie over Time Series Insights
+      href: time-series-insights-update-overview.md
 - name: Snelstartgidsen
   items:
-  - name: Azure Time Series Insights GA
-    items:
-    - name: Time Series Insights verkennen
-      href: time-series-quickstart.md
-  - name: Azure Time Series Insights preview
-    items:
-    - name: Time Series Insights preview verkennen
-      href: time-series-insights-update-quickstart.md
+    - name: Azure Time Series Insights GA
+      items:
+        - name: Time Series Insights verkennen
+          href: time-series-quickstart.md
+    - name: Azure Time Series Insights preview
+      items:
+        - name: Time Series Insights preview verkennen
+          href: time-series-insights-update-quickstart.md
 - name: Zelfstudies
   items:
-  - name: JavaScript-clientbibliotheek van Time Series Insights ontdekken
-    href: tutorial-explore-js-client-lib.md
-  - name: Een Time Series Insights-web-app met één pagina maken
-    href: tutorial-create-tsi-sample-spa.md
-  - name: Azure Time Series Insights GA
-    items:
-    - name: Een Time Series Insights-omgeving maken
-      href: tutorial-create-populate-tsi-environment.md
-  - name: Azure Time Series Insights preview
-    items:
-    - name: Zelfstudie voor Azure Time Series Insights preview
-      href: time-series-insights-update-create-environment.md
+    - name: JavaScript-clientbibliotheek van Time Series Insights ontdekken
+      href: tutorial-explore-js-client-lib.md
+    - name: Een Time Series Insights-web-app met één pagina maken
+      href: tutorial-create-tsi-sample-spa.md
+    - name: Azure Time Series Insights GA
+      items:
+        - name: Een Time Series Insights-omgeving maken
+          href: tutorial-create-populate-tsi-environment.md
+    - name: Azure Time Series Insights preview
+      items:
+        - name: Zelfstudie voor Azure Time Series Insights preview
+          href: time-series-insights-update-create-environment.md
 - name: Concepten
   items:
-  - name: Azure Time Series Insights GA
-    items:
-    - name: Meer informatie over Time Series Insights
-      href: time-series-insights-overview.md
-    - name: Uw omgeving plannen
-      href: time-series-insights-environment-planning.md
-    - name: Gegevens visualiseren in de Verkenner
-      href: time-series-insights-explorer.md
-    - name: Inzicht in gegevensretentie
-      href: time-series-insights-concepts-retention.md
-  - name: Azure Time Series Insights preview
-    items:
-    - name: Uw omgeving plannen
-      href: time-series-insights-update-plan.md
-    - name: Gegevensopslag en inkomend verkeer
-      href: time-series-insights-update-storage-ingress.md
-    - name: Gebruiksvoorbeelden
-      href: time-series-insights-update-use-cases.md
-    - name: Gegevensmodellering
-      href: time-series-insights-update-tsm.md
-    - name: Query's uitvoeren op gegevens
-      href: time-series-insights-update-tsq.md
-    - name: Gegevens visualiseren in de verkenner - update
-      href: time-series-insights-update-explorer.md
-  - name: Ontwikkelen
-    items:
-    - name: Verifiëren en autoriseren
-      href: time-series-insights-authentication-and-authorization.md
-    - name: Gegevens opvragen met C#
-      href: time-series-insights-query-data-csharp.md
-    - name: Referentiegegevens beheren in C#
-      href: time-series-insights-manage-reference-data-csharp.md
-    - name: Een aangepaste weergave delen
-      href: time-series-insights-parameterized-urls.md
+    - name: Azure Time Series Insights GA
+      items:
+        - name: Meer informatie over Time Series Insights
+          href: time-series-insights-overview.md
+        - name: Uw omgeving plannen
+          href: time-series-insights-environment-planning.md
+        - name: Gegevens visualiseren in de Verkenner
+          href: time-series-insights-explorer.md
+        - name: Inzicht in gegevensretentie
+          href: time-series-insights-concepts-retention.md
+    - name: Azure Time Series Insights preview
+      items:
+        - name: Uw omgeving plannen
+          href: time-series-insights-update-plan.md
+        - name: Gegevensopslag en inkomend verkeer
+          href: time-series-insights-update-storage-ingress.md
+        - name: Gebruiksvoorbeelden
+          href: time-series-insights-update-use-cases.md
+        - name: Gegevensmodellering
+          href: time-series-insights-update-tsm.md
+        - name: Query's uitvoeren op gegevens
+          href: time-series-insights-update-tsq.md
+        - name: Gegevens visualiseren in de verkenner - update
+          href: time-series-insights-update-explorer.md
+    - name: Ontwikkelen
+      items:
+        - name: Verifiëren en autoriseren
+          href: time-series-insights-authentication-and-authorization.md
+        - name: 'Gegevens opvragen met C#'
+          href: time-series-insights-query-data-csharp.md
+        - name: 'Referentiegegevens beheren in C#'
+          href: time-series-insights-manage-reference-data-csharp.md
+        - name: Een aangepaste weergave delen
+          href: time-series-insights-parameterized-urls.md
 - name: Handleidingen
   items:
-  - name: Gegevenstoegang verlenen
-    href: time-series-insights-data-access.md
-  - name: Verbinding maken met Event Hubs
-    href: time-series-insights-how-to-add-an-event-source-eventhub.md
-  - name: Verbinding maken met IoT Hub
-    href: time-series-insights-how-to-add-an-event-source-iothub.md
-  - name: Resources beheren met sjablonen
-    href: time-series-insights-manage-resources-using-azure-resource-manager-template.md
-  - name: Azure Time Series Insights GA
-    items:
-    - name: Een omgeving maken
-      href: time-series-insights-get-started.md
-    - name: Gegevensretentie configureren
-      href: time-series-insights-how-to-configure-retention.md
-    - name: Een referentiegegevensset maken
-      href: time-series-insights-add-reference-data-set.md
-    - name: Gebeurtenissen verzenden
-      href: time-series-insights-send-events.md
-    - name: De schaal van uw omgeving aanpassen
-      href: time-series-insights-how-to-scale-your-environment.md
-    - name: JSON vormgeven voor query's
-      href: how-to-shape-query-json.md
-    - name: Aanvraagbeperkingen minimaliseren
-      href: time-series-insights-environment-mitigate-latency.md
-    - name: Problemen vaststellen en oplossen
-      href: time-series-insights-diagnose-and-solve-problems.md
-  - name: Azure Time Series Insights preview
-    items:
-    - name: Inrichten en beheren
-      href: time-series-insights-update-how-to-manage.md
-    - name: Een Time Series-id kiezen
-      href: time-series-insights-update-how-to-id.md
-    - name: Problemen vaststellen en oplossen
-      href: time-series-insights-update-how-to-troubleshoot.md
-    - name: Gegevensmodellering
-      href: time-series-insights-update-how-to-tsm.md
-    - name: JSON vormgeven voor query's
-      href: time-series-insights-update-how-to-shape-events.md
+    - name: Gegevenstoegang verlenen
+      href: time-series-insights-data-access.md
+    - name: Verbinding maken met Event Hubs
+      href: time-series-insights-how-to-add-an-event-source-eventhub.md
+    - name: Verbinding maken met IoT Hub
+      href: time-series-insights-how-to-add-an-event-source-iothub.md
+    - name: Resources beheren met sjablonen
+      href: time-series-insights-manage-resources-using-azure-resource-manager-template.md
+    - name: Azure Time Series Insights GA
+      items:
+        - name: Een omgeving maken
+          href: time-series-insights-get-started.md
+        - name: Gegevensretentie configureren
+          href: time-series-insights-how-to-configure-retention.md
+        - name: Een referentiegegevensset maken
+          href: time-series-insights-add-reference-data-set.md
+        - name: Gebeurtenissen verzenden
+          href: time-series-insights-send-events.md
+        - name: De schaal van uw omgeving aanpassen
+          href: time-series-insights-how-to-scale-your-environment.md
+        - name: JSON vormgeven voor query's
+          href: how-to-shape-query-json.md
+        - name: Aanvraagbeperkingen minimaliseren
+          href: time-series-insights-environment-mitigate-latency.md
+        - name: Problemen vaststellen en oplossen
+          href: time-series-insights-diagnose-and-solve-problems.md
+    - name: Azure Time Series Insights preview
+      items:
+        - name: Inrichten en beheren
+          href: time-series-insights-update-how-to-manage.md
+        - name: Een Time Series-id kiezen
+          href: time-series-insights-update-how-to-id.md
+        - name: Problemen vaststellen en oplossen
+          href: time-series-insights-update-how-to-troubleshoot.md
+        - name: Gegevensmodellering
+          href: time-series-insights-update-how-to-tsm.md
+        - name: JSON vormgeven voor query's
+          href: time-series-insights-update-how-to-shape-events.md
 - name: Naslaginformatie
   items:
-  - name: Time Series Insights
-    items:
-    - name: Azure Time Series Insights GA
-      href: /rest/api/time-series-insights/ga
+    - name: Time Series Insights
       items:
-      - name: Query’s uitvoeren
-        href: /rest/api/time-series-insights/ga-query
-        items:
-        - name: API
-          href: /rest/api/time-series-insights/ga-query-api
-        - name: Syntaxis
-          href: /rest/api/time-series-insights/ga-query-syntax
-      - name: API voor verwijzingsgegevens
-        href: /rest/api/time-series-insights/ga-reference-data-api
-    - name: Azure Time Series Insights preview
-      href: /rest/api/time-series-insights/preview
-      items:
-      - name: Time Series-query
-        href: /rest/api/time-series-insights/preview-query
-      - name: Time Series-model
-        href: /rest/api/time-series-insights/preview-model
-      - name: API voor Time Series-omgeving
-        href: /rest/api/time-series-insights/preview-env
-      - name: Expressie en syntaxis van Time Series
-        href: /rest/api/time-series-insights/preview-tsx
+        - name: Azure Time Series Insights GA
+          href: /rest/api/time-series-insights/ga
+          items:
+            - name: Query’s uitvoeren
+              href: /rest/api/time-series-insights/ga-query
+              items:
+                - name: API
+                  href: /rest/api/time-series-insights/ga-query-api
+                - name: Syntaxis
+                  href: /rest/api/time-series-insights/ga-query-syntax
+            - name: API voor verwijzingsgegevens
+              href: /rest/api/time-series-insights/ga-reference-data-api
+        - name: Azure Time Series Insights preview
+          href: /rest/api/time-series-insights/preview
+          items:
+            - name: Time Series-query
+              href: /rest/api/time-series-insights/preview-query
+            - name: Time Series-model
+              href: /rest/api/time-series-insights/preview-model
+            - name: API voor Time Series-omgeving
+              href: /rest/api/time-series-insights/preview-env
+            - name: Expressie en syntaxis van Time Series
+              href: /rest/api/time-series-insights/preview-tsx
 - name: Verwant
   items:
-  - name: Oplossingen
-    items:
-    - name: Vooraf geconfigureerde oplossingen van IoT Suite
-      href: /azure/iot-suite
-    - name: IoT Central
-      href: https://docs.microsoft.com/microsoft-iot-central/
-  - name: Platformservices
-    items:
-    - name: IoT Hub
-      href: /azure/iot-hub
-    - name: IoT Hub Device Provisioning Service
-      href: /azure/iot-dps
-    - name: Kaarten
-      href: /azure/azure-maps
-    - name: Service-SDK's
-      href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
-    - name: Time Series Insights
-      href: /azure/time-series-insights
-  - name: Edge
-    items:
-    - name: IoT Edge
-      href: /azure/iot-edge
-    - name: IoT-apparaat-SDK's
-      href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
-  - name: Azure Stream Analytics
-    href: /azure/stream-analytics/
+    - name: Oplossingen
+      items:
+        - name: Vooraf geconfigureerde oplossingen van IoT Suite
+          href: /azure/iot-suite
+        - name: IoT Central
+          href: 'https://docs.microsoft.com/microsoft-iot-central/'
+    - name: Platformservices
+      items:
+        - name: IoT Hub
+          href: /azure/iot-hub
+        - name: IoT Hub Device Provisioning Service
+          href: /azure/iot-dps
+        - name: Kaarten
+          href: /azure/azure-maps
+        - name: Service-SDK's
+          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks'
+        - name: Time Series Insights
+          href: /azure/time-series-insights
+    - name: Edge
+      items:
+        - name: IoT Edge
+          href: /azure/iot-edge
+        - name: IoT-apparaat-SDK's
+          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
+    - name: Azure Stream Analytics
+      href: /azure/stream-analytics/
 - name: Resources
   items:
-  - name: Aanvragen van klantgegevens
-    href: time-series-insights-customer-data-requests.md
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/?category=iot
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/time-series-insights/
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Beschikbaarheid in regio’s
-    href: https://azure.microsoft.com/regions/services/
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureTimeSeriesInsights
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-timeseries-insights
-  - name: Ondersteuningsopties
-    href: https://azure.microsoft.com/support/options/
-  - name: Video's
-    href: https://azure.microsoft.com/resources/videos/index/?services=time-series-insights
-ms.openlocfilehash: ead0631edf7ed36d7dadf185c49bb0e78bafc9c7
-ms.sourcegitcommit: 8b41b86841456deea26b0941e8ae3fcdb2d5c1e1
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/05/2019
-ms.locfileid: "57341377"
+    - name: Aanvragen van klantgegevens
+      href: time-series-insights-customer-data-requests.md
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/?category=iot'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/time-series-insights/'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Beschikbaarheid in regio’s
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureTimeSeriesInsights'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-timeseries-insights'
+    - name: Ondersteuningsopties
+      href: 'https://azure.microsoft.com/support/options/'
+    - name: Video's
+      href: 'https://azure.microsoft.com/resources/videos/index/?services=time-series-insights'
