--- a/articles/virtual-machines/TOC.yml
+++ b/articles/virtual-machines/TOC.yml
@@ -1,4 +1,3 @@
-items:
 - name: Documentatie voor Virtual Machines
   href: index.yml
 - name: Virtuele Linux-machines in Azure
@@ -9,29 +8,23 @@ items:
   href: extensions/overview.md
 - name: Workloads
   items:
-  - name: Oracle
-    href: workloads/oracle/oracle-considerations.md
-  - name: SAP
-    href: workloads/sap/get-started.md
-  - name: Mainframe opnieuw hosten
-    href: workloads/mainframe-rehosting/overview.md
+    - name: Oracle
+      href: workloads/oracle/oracle-considerations.md
+    - name: SAP
+      href: workloads/sap/get-started.md
+    - name: Mainframe opnieuw hosten
+      href: workloads/mainframe-rehosting/overview.md
 - name: Klassieke implementaties
   items:
-  - name: Linux-VM's met klassieke implementatie
-    href: linux/overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2fclassic%2ftoc.json
-  - name: Windows-VM's met klassieke implementatie
-    href: windows/overview.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fclassic%2ftoc.json
+    - name: Linux-VM's met klassieke implementatie
+      href: linux/overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2fclassic%2ftoc.json
+    - name: Windows-VM's met klassieke implementatie
+      href: windows/overview.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fclassic%2ftoc.json
 - name: Resources
   items:
-  - name: Uw vaardigheden ontwikkelen met Microsoft Learn
-    href: /learn/browse/?products=azure-virtual-machines
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/?category=compute
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-ms.openlocfilehash: 7f253c1ed2b4910e18acd65367cd8e0e10574c0d
-ms.sourcegitcommit: 90c6b63552f6b7f8efac7f5c375e77526841a678
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 02/23/2019
-ms.locfileid: "56737744"
+    - name: Uw vaardigheden ontwikkelen met Microsoft Learn
+      href: /learn/browse/?products=azure-virtual-machines
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/?category=compute'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
