--- a/articles/virtual-machines/index.yml
+++ b/articles/virtual-machines/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 52af3ada5d32a2cd6c3e7edb3ea5b4a693548cf8
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46954429"
 documentType: LandingData
 title: Documentatie voor Virtual Machines
 metadata:
   document_id: na
-  title: Documentatie voor virtuele Linux-machines in Azure - zelfstudies, API-verwijzing | Microsoft Docs
-  meta.description: Learn how to create, deploy, and manage Windows or Linux virtual machines. Tutorials, API references, and other documentation.
+  title: 'Documentatie voor virtuele Linux-machines in Azure - zelfstudies, API-verwijzing | Microsoft Docs'
+  meta.description: 'Learn how to create, deploy, and manage Windows or Linux virtual machines. Tutorials, API references, and other documentation.'
   services: virtual-machines
   author: czeumault
   manager: carolz
@@ -21,105 +15,105 @@ metadata:
   ms.date: 01/23/2017
   ms.author: carolz
 abstract:
-  description: Meer informatie over het maken van virtuele Azure-machines. Zelfstudies, API-verwijzingen en andere documentatie laten zien hoe u virtuele Windows- en Linux-machines en complexe VM-sjablonen maakt en implementeert.
+  description: 'Meer informatie over het maken van virtuele Azure-machines. Zelfstudies, API-verwijzingen en andere documentatie laten zien hoe u virtuele Windows- en Linux-machines en complexe VM-sjablonen maakt en implementeert.'
 sections:
-- title: 
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+  - title: null
     items:
-    - title: Aan de slag met virtuele Windows-machines
-      href: /azure/virtual-machines/windows
-      image:
-        src: media/index/virtual-machines.svg
-        href: /azure/virtual-machines/windows
-    - title: Aan de slag met virtuele Linux-machines
-      href: /azure/virtual-machines/linux
-      image:
-        src: media/index/get-started.svg
-        href: /azure/virtual-machines/linux
-- title: Snelstartgidsen van 5 minuten voor Linux
-  items:
-  - type: paragraph
-    text: 'Meer informatie over het implementeren van een NGINX-webserver binnen een virtuele machine met Ubuntu:'
-  - type: list
-    style: icon48
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Aan de slag met virtuele Windows-machines
+            href: /azure/virtual-machines/windows
+            image:
+              src: media/index/virtual-machines.svg
+              href: /azure/virtual-machines/windows
+          - title: Aan de slag met virtuele Linux-machines
+            href: /azure/virtual-machines/linux
+            image:
+              src: media/index/get-started.svg
+              href: /azure/virtual-machines/linux
+  - title: Snelstartgidsen van 5 minuten voor Linux
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/cli.svg
-      text: Azure-CLI
-      href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-cli?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/portal.svg
-      text: Azure Portal
-      href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-portal?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-powershell?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-- title: Snelstartgidsen van 5 minuten voor Windows
-  items:
-  - type: paragraph
-    text: 'Meer informatie over het implementeren van een IIS-webserver binnen een virtuele machine met Windows Server 2016:'
-  - type: list
-    style: icon48
+      - type: paragraph
+        text: 'Meer informatie over het implementeren van een NGINX-webserver binnen een virtuele machine met Ubuntu:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/cli.svg'
+            text: Azure-CLI
+            href: 'https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-cli?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json'
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/portal.svg'
+            text: Azure Portal
+            href: 'https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-portal?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json'
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/logo_powershell.svg'
+            text: Azure PowerShell
+            href: 'https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-powershell?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json'
+  - title: Snelstartgidsen van 5 minuten voor Windows
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/windows/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-powershell?toc=/azure/virtual-machines/windows/toc.json
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/windows/media/index/portal.svg
-      text: Azure Portal
-      href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-portal?toc=/azure/virtual-machines/windows/toc.json
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/windows/media/index/cli.svg
-      text: Azure-CLI
-      href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-cli?toc=/azure/virtual-machines/windows/toc.json
-- title: Uw vaardigheden ontwikkelen met Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: 'Meer informatie over het implementeren van een IIS-webserver binnen een virtuele machine met Windows Server 2016:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/windows/media/index/logo_powershell.svg'
+            text: Azure PowerShell
+            href: 'https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-powershell?toc=/azure/virtual-machines/windows/toc.json'
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/windows/media/index/portal.svg'
+            text: Azure Portal
+            href: 'https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-portal?toc=/azure/virtual-machines/windows/toc.json'
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/windows/media/index/cli.svg'
+            text: Azure-CLI
+            href: 'https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-cli?toc=/azure/virtual-machines/windows/toc.json'
+  - title: Uw vaardigheden ontwikkelen met Microsoft Learn
     items:
-    - title: Kennismaking met Azure Compute
-      href: /learn/modules/intro-to-azure-compute/
-      image:
-        src: /learn/achievements/intro-to-azure-compute.svg
-        href: /learn/modules/intro-to-azure-compute/
-    - title: Kennismaking met virtuele machines in Azure
-      href: /learn/modules/intro-to-azure-virtual-machines/
-      image:
-        src: /learn/achievements/intro-to-azure-virtual-machines.svg
-        href: /learn/modules/intro-to-azure-virtual-machines/
-    - title: Schijven in virtuele machines in Azure toevoegen en de grootte ervan wijzigen
-      href: /learn/modules/add-and-size-disks-in-azure-virtual-machines/
-      image:
-        src: /learn/achievements/add-and-size-disks-in-azure-virtual-machines.svg
-        href: /learn/modules/add-and-size-disks-in-azure-virtual-machines/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-virtual-machines">Meer interactief leren...</a>
-- title: Gratis Pluralsight-videotraining
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Kennismaking met Azure Compute
+            href: /learn/modules/intro-to-azure-compute/
+            image:
+              src: /learn/achievements/intro-to-azure-compute.svg
+              href: /learn/modules/intro-to-azure-compute/
+          - title: Kennismaking met virtuele machines in Azure
+            href: /learn/modules/intro-to-azure-virtual-machines/
+            image:
+              src: /learn/achievements/intro-to-azure-virtual-machines.svg
+              href: /learn/modules/intro-to-azure-virtual-machines/
+          - title: Schijven in virtuele machines in Azure toevoegen en de grootte ervan wijzigen
+            href: /learn/modules/add-and-size-disks-in-azure-virtual-machines/
+            image:
+              src: /learn/achievements/add-and-size-disks-in-azure-virtual-machines.svg
+              href: /learn/modules/add-and-size-disks-in-azure-virtual-machines/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-virtual-machines">Meer interactief leren...</a>
+  - title: Gratis Pluralsight-videotraining
     items:
-    - title: Azure-beheerder
-      href: https://go.microsoft.com/fwlink/?linkid=2012827
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012827
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Azure-beheerder
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+  - title: Naslaginformatie
     items:
-    - title: Opdrachtregel
-      html: <p><a href="/cli/azure/vm">Azure-CLI</a></p><p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p>
-    - title: Talen
-      html: <p><a href="/dotnet/api/microsoft.azure.management.compute">.NET</a></p><p><a href="/java/api">Java</a></p><p><a href="https://azure.microsoft.com/develop/nodejs/#azure-sdk">Node.js</a></p><p><a href="https://azure.microsoft.com/develop/python/">Python</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/compute">Naslaginformatie over REST-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Opdrachtregel
+            html: <p><a href="/cli/azure/vm">Azure-CLI</a></p><p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p>
+          - title: Talen
+            html: '<p><a href="/dotnet/api/microsoft.azure.management.compute">.NET</a></p><p><a href="/java/api">Java</a></p><p><a href="https://azure.microsoft.com/develop/nodejs/#azure-sdk">Node.js</a></p><p><a href="https://azure.microsoft.com/develop/python/">Python</a></p>'
+          - title: REST
+            html: <p><a href="/rest/api/compute">Naslaginformatie over REST-API</a></p>
