--- a/articles/virtual-machines/windows/index.yml
+++ b/articles/virtual-machines/windows/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 64a502133e671037c0ff665bc47989bdd32f8b6d
-ms.sourcegitcommit: 1fc949dab883453ac960e02d882e613806fabe6f
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 11/03/2018
-ms.locfileid: "50979111"
 documentType: LandingData
 title: Documentatie voor virtuele Windows-machines
 metadata:
   document_id: 1d98d530-28c7-635f-d41b-8da3ae02970c
-  title: Documentatie voor virtuele Windows-machines in Azure - zelfstudies, API-verwijzing
-  meta.description: Learn how to create Windows virtual machines. Documentation helps you plan, deploy, and manage a virtual machine computing environment in the cloud.
+  title: 'Documentatie voor virtuele Windows-machines in Azure - zelfstudies, API-verwijzing'
+  meta.description: 'Learn how to create Windows virtual machines. Documentation helps you plan, deploy, and manage a virtual machine computing environment in the cloud.'
   services: virtual-machines\windows
   author: czeumault
   manager: carolz
@@ -21,109 +15,109 @@ metadata:
   ms.date: 01/23/2017
   ms.author: carolz
 abstract:
-  description: Virtuele Azure Windows-machines bieden beveiligde, gevirtualiseerde infrastructuur met een hoge schaalbaarheid op aanvraag met Windows Server. Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u virtuele Windows-machines maakt, configureert, beheert en schaalt.
+  description: 'Virtuele Azure Windows-machines bieden beveiligde, gevirtualiseerde infrastructuur met een hoge schaalbaarheid op aanvraag met Windows Server. Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u virtuele Windows-machines maakt, configureert, beheert en schaalt.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
-      src: https://docs.microsoft.com/azure/virtual-machines/windows/media/index/create-windows-server-virtual-machine.png
+      src: 'https://docs.microsoft.com/azure/virtual-machines/windows/media/index/create-windows-server-virtual-machine.png'
       width: 250
-    title: Maak een virtuele Windows Server-machine. (3:58)
-    href: https://azure.microsoft.com/resources/videos/create-windows-server-virtual-machine/
+    title: 'Maak een virtuele Windows Server-machine. (3:58)'
+    href: 'https://azure.microsoft.com/resources/videos/create-windows-server-virtual-machine/'
     width: 250
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: 'Meer informatie over het implementeren van een IIS-webserver binnen een virtuele machine met Windows Server 2016:'
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/windows/media/index/portal.svg
-      text: Azure-portal
-      href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-portal?toc=/azure/virtual-machines/windows/toc.json
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/windows/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-powershell?toc=/azure/virtual-machines/windows/toc.json
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/windows/media/index/cli.svg
-      text: Azure-CLI
-      href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-cli?toc=/azure/virtual-machines/windows/toc.json
-  - type: paragraph
-    text: 'Meer informatie over continue implementatie:'
-  - type: list
-    style: icon48
+      - type: paragraph
+        text: 'Meer informatie over het implementeren van een IIS-webserver binnen een virtuele machine met Windows Server 2016:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/windows/media/index/portal.svg'
+            text: Azure-portal
+            href: 'https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-portal?toc=/azure/virtual-machines/windows/toc.json'
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/windows/media/index/logo_powershell.svg'
+            text: Azure PowerShell
+            href: 'https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-powershell?toc=/azure/virtual-machines/windows/toc.json'
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/windows/media/index/cli.svg'
+            text: Azure-CLI
+            href: 'https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-cli?toc=/azure/virtual-machines/windows/toc.json'
+      - type: paragraph
+        text: 'Meer informatie over continue implementatie:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/media/index/logo_vs-team-services.svg'
+            text: Azure DevOps Services
+            href: 'https://docs.microsoft.com/vsts/build-release/apps/cd/deploy-webdeploy-iis-deploygroups?toc=/vsts/deploy-azure/toc.json&bc=/vsts/deploy-azure/breadcrumb/toc.json'
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/media/index/logo_vs-team-services.svg
-      text: Azure DevOps Services
-      href: https://docs.microsoft.com/vsts/build-release/apps/cd/deploy-webdeploy-iis-deploygroups?toc=/vsts/deploy-azure/toc.json&bc=/vsts/deploy-azure/breadcrumb/toc.json
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Meer informatie over het implementeren, beheren en controleren van virtuele Windows-machines in Azure.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Meer informatie over het implementeren, beheren en controleren van virtuele Windows-machines in Azure.'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/virtual-machines/windows/tutorial-manage-vm">Virtuele Windows-machines maken en beheren</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-manage-data-disk">VM-schijven maken en beheren</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-automate-vm-deployment">VM-configuratie automatiseren</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-custom-images">Aangepaste VM-installatiekopieën maken</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-availability-sets">Virtuele machines met hoge beschikbaarheid maken</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-create-vmss">Een VM-schaalset maken</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-load-balancer">Taakverdelingen maken voor virtuele machines</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-virtual-network">Virtuele machines met virtuele netwerken beheren</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-backup-vms">Back-ups maken van virtuele machines</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-govern-resources">VM's beheren</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-monitoring">Virtuele machines bewaken</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-azure-security">Beveiliging van virtuele machines beheren</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-iis-sql">Een SQL-/IIS-/.NET-stack installeren</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-secure-web-server">Een webserver beveiligen met SSL</a>
+  - title: Uw vaardigheden ontwikkelen met Microsoft Learn
     items:
-    - html: <a href="/azure/virtual-machines/windows/tutorial-manage-vm">Virtuele Windows-machines maken en beheren</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-manage-data-disk">VM-schijven maken en beheren</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-automate-vm-deployment">VM-configuratie automatiseren</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-custom-images">Aangepaste VM-installatiekopieën maken</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-availability-sets">Virtuele machines met hoge beschikbaarheid maken</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-create-vmss">Een VM-schaalset maken</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-load-balancer">Taakverdelingen maken voor virtuele machines</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-virtual-network">Virtuele machines met virtuele netwerken beheren</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-backup-vms">Back-ups maken van virtuele machines</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-govern-resources">VM's beheren</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-monitoring">Virtuele machines bewaken</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-azure-security">Beveiliging van virtuele machines beheren</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-iis-sql">Een SQL-/IIS-/.NET-stack installeren</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-secure-web-server">Een webserver beveiligen met SSL</a>
-- title: Uw vaardigheden ontwikkelen met Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: "\_Een virtuele Windows-machine maken in Azure"
+            href: /learn/modules/create-windows-virtual-machine-in-azure/
+            image:
+              src: /learn/achievements/create-windows-virtual-machine-in-azure.svg
+              href: /learn/modules/create-windows-virtual-machine-in-azure/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-virtual-machines">Meer interactief leren...</a>
+  - title: Gratis Pluralsight-videotraining
     items:
-    - title: " Een virtuele Windows-machine maken in Azure"
-      href: /learn/modules/create-windows-virtual-machine-in-azure/
-      image:
-        src: /learn/achievements/create-windows-virtual-machine-in-azure.svg
-        href: /learn/modules/create-windows-virtual-machine-in-azure/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-virtual-machines">Meer interactief leren...</a>
-- title: Gratis Pluralsight-videotraining
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Azure-beheerder
+            href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://go.microsoft.com/fwlink/?linkid=2012827'
+  - title: Voorbeelden
     items:
-    - title: Azure-beheerder
-      href: https://go.microsoft.com/fwlink/?linkid=2012827
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012827
-- title: Voorbeelden
-  items:
-  - type: paragraph
-    text: Implementeer uw eerste toepassing in Azure.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: Implementeer uw eerste toepassing in Azure.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/virtual-machines/virtual-machines-windows-cli-samples?toc=/azure/virtual-machines/windows/toc.json">Azure-CLI</a>
+          - html: <a href="/azure/virtual-machines/virtual-machines-windows-powershell-samples?toc=/azure/virtual-machines/windows/toc.json">Azure PowerShell</a>
+  - title: Naslaginformatie
     items:
-    - html: <a href="/azure/virtual-machines/virtual-machines-windows-cli-samples?toc=/azure/virtual-machines/windows/toc.json">Azure-CLI</a>
-    - html: <a href="/azure/virtual-machines/virtual-machines-windows-powershell-samples?toc=/azure/virtual-machines/windows/toc.json">Azure PowerShell</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Opdrachtregel
-      html: <p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/vm">Azure-CLI</a></p>
-    - title: Talen
-      html: <p><a href="/dotnet/api/microsoft.azure.management.compute">.NET</a></p><p><a href="/java/api">Java</a></p><p><a href="https://azure.microsoft.com/develop/nodejs/#azure-sdk">Node.js</a></p><p><a href="https://azure.microsoft.com/develop/python/">Python</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/compute">Naslaginformatie over de Compute REST-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Opdrachtregel
+            html: <p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/vm">Azure-CLI</a></p>
+          - title: Talen
+            html: '<p><a href="/dotnet/api/microsoft.azure.management.compute">.NET</a></p><p><a href="/java/api">Java</a></p><p><a href="https://azure.microsoft.com/develop/nodejs/#azure-sdk">Node.js</a></p><p><a href="https://azure.microsoft.com/develop/python/">Python</a></p>'
+          - title: REST
+            html: <p><a href="/rest/api/compute">Naslaginformatie over de Compute REST-API</a></p>
