--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -1,61 +1,54 @@
-items:
 - name: Documentatie voor Virtual WAN
   href: index.yml
 - name: Overzicht
   items:
-  - name: Over Virtual WAN
-    href: virtual-wan-about.md
+    - name: Over Virtual WAN
+      href: virtual-wan-about.md
 - name: Zelfstudies
   items:
-  - name: Een site-naar-site-verbinding maken
-    href: virtual-wan-site-to-site-portal.md
-  - name: Een ExpressRoute-verbinding maken
-    href: virtual-wan-expressroute-portal.md
-  - name: Een punt-naar-site-verbinding maken
-    href: virtual-wan-point-to-site-portal.md
+    - name: Een site-naar-site-verbinding maken
+      href: virtual-wan-site-to-site-portal.md
+    - name: Een ExpressRoute-verbinding maken
+      href: virtual-wan-expressroute-portal.md
+    - name: Een punt-naar-site-verbinding maken
+      href: virtual-wan-point-to-site-portal.md
 - name: Concepten
   items:
-  - name: Locaties en partners
-    href: virtual-wan-locations-partners.md
-  - name: Office 365-controlelaag in Virtual WAN
-    href: virtual-wan-office365-overview.md
+    - name: Locaties en partners
+      href: virtual-wan-locations-partners.md
+    - name: Office 365-controlelaag in Virtual WAN
+      href: virtual-wan-office365-overview.md
 - name: Handleidingen
   items:
-  - name: Verkeer routeren van een virtuele hub naar een NVA
-    items:
-    - name: Azure Portal
-      href: virtual-wan-route-table-portal.md
-    - name: Azure PowerShell
-      href: virtual-wan-route-table.md
-  - name: 'Virtuele WAN-partners: automatisering'
-    href: virtual-wan-configure-automation-providers.md
+    - name: Verkeer routeren van een virtuele hub naar een NVA
+      items:
+        - name: Azure Portal
+          href: virtual-wan-route-table-portal.md
+        - name: Azure PowerShell
+          href: virtual-wan-route-table.md
+    - name: 'Virtuele WAN-partners: automatisering'
+      href: virtual-wan-configure-automation-providers.md
 - name: Naslaginformatie
   items:
-  - name: Azure PowerShell
-    href: /powershell/module/az.network#networking
-  - name: REST
-    href: /rest/api/azure
-  - name: Azure-CLI
-    href: /cli/azure/ext/virtual-wan
+    - name: Azure PowerShell
+      href: '/powershell/module/az.network#networking'
+    - name: REST
+      href: /rest/api/azure
+    - name: Azure-CLI
+      href: /cli/azure/ext/virtual-wan
 - name: Resources
   items:
-  - name: Veelgestelde vragen
-    href: virtual-wan-faq.md
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/?category=networking
-  - name: Blog
-    href: https://azure.microsoft.com/blog/topics/networking
-  - name: Abonnements- en servicebeperkingen
-    href: ../azure-subscription-service-limits.md?toc=%2fazure%2fvpn-gateway%2ftoc.json
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/virtual-wan
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: SLA
-    href: https://azure.microsoft.com/support/legal/sla
-ms.openlocfilehash: 555af48950df4afab512951a7c3ae53e41663427
-ms.sourcegitcommit: c63fe69fd624752d04661f56d52ad9d8693e9d56
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/28/2019
-ms.locfileid: "58579730"
+    - name: Veelgestelde vragen
+      href: virtual-wan-faq.md
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/?category=networking'
+    - name: Blog
+      href: 'https://azure.microsoft.com/blog/topics/networking'
+    - name: Abonnements- en servicebeperkingen
+      href: ../azure-subscription-service-limits.md?toc=%2fazure%2fvpn-gateway%2ftoc.json
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/virtual-wan'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: SLA
+      href: 'https://azure.microsoft.com/support/legal/sla'
